--- a/assets/lang/da.json
+++ b/assets/lang/da.json
@@ -23,10 +23,10 @@
     "addon.block_completionstatus.pluginname": "Status på progression på kurset",
     "addon.block_glossaryrandom.pluginname": "Tilfældigt ordbogsopslag",
     "addon.block_learningplans.pluginname": "Læringsplaner",
-    "addon.block_myoverview.all": "Alle (bortset fra fjernede fra visning)",
+    "addon.block_myoverview.all": "Alle (bortset fra skjulte)",
     "addon.block_myoverview.favourites": "Fremhævede",
     "addon.block_myoverview.future": "Fremtidige",
-    "addon.block_myoverview.hiddencourses": "Fjernet fra visning",
+    "addon.block_myoverview.hiddencourses": "Skjulte",
     "addon.block_myoverview.inprogress": "I gang",
     "addon.block_myoverview.lastaccessed": "Sidst besøgt",
     "addon.block_myoverview.morecourses": "Flere kurser",
@@ -73,7 +73,6 @@
     "addon.calendar.calendarreminders": "Kalenderpåmindelser",
     "addon.calendar.confirmeventdelete": "Er du sikker på at du vil slette begivenheden \"{{$a}}\"?",
     "addon.calendar.confirmeventseriesdelete": "Begivenheden \"{{$a.name}}\" er en af flere. Vil du bare slette denne eller alle {{$a.count}} begivenheder?",
-    "addon.calendar.courseevents": "Kursusbegivenheder",
     "addon.calendar.daynext": "Næste dag",
     "addon.calendar.dayprev": "Forrige dag",
     "addon.calendar.defaultnotificationtime": "Standard notifikationstidspunkt",
@@ -96,7 +95,6 @@
     "addon.calendar.fri": "Fre",
     "addon.calendar.friday": "Fredag",
     "addon.calendar.gotoactivity": "Gå til aktiviteten",
-    "addon.calendar.groupevents": "Gruppebegivenheder",
     "addon.calendar.invalidtimedurationminutes": "Varigheden af det indtastede antal minutter er ugyldig, vær venlig at indtaste en varighed større end 0 minutter eller vælg ingen varighed.",
     "addon.calendar.invalidtimedurationuntil": "Det tidspunkt du har valgt for varighed, ligger før starttidspunktet. Ret dette inden du fortsætter.",
     "addon.calendar.mon": "Man",
@@ -114,7 +112,6 @@
     "addon.calendar.sat": "Lør",
     "addon.calendar.saturday": "Lørdag",
     "addon.calendar.setnewreminder": "Opret en ny påmindelse",
-    "addon.calendar.siteevents": "Site-begivenheder",
     "addon.calendar.sun": "Søn",
     "addon.calendar.sunday": "Søndag",
     "addon.calendar.thu": "Tors",
@@ -130,7 +127,6 @@
     "addon.calendar.typesite": "Fælles",
     "addon.calendar.typeuser": "Personlig",
     "addon.calendar.upcomingevents": "Kommende begivenheder",
-    "addon.calendar.userevents": "Personlig kalender",
     "addon.calendar.wed": "Ons",
     "addon.calendar.wednesday": "Onsdag",
     "addon.calendar.when": "Når",
@@ -412,17 +408,14 @@
     "addon.mod_chat.errorwhilegettingchatusers": "Fejl ved hentning af chatbrugere.",
     "addon.mod_chat.errorwhileretrievingmessages": "Fejl ved hentning af beskeder fra serveren.",
     "addon.mod_chat.errorwhilesendingmessage": "Fejl ved afsendelse af besked.",
-    "addon.mod_chat.messagebeepseveryone": "{{$a}} bipper alle!",
     "addon.mod_chat.messagebeepsyou": "{{$a}} har lige bippet dig!",
     "addon.mod_chat.messageenter": "{{$a}} er lige kommet til",
     "addon.mod_chat.messageexit": "{{$a}} har forladt chatten",
     "addon.mod_chat.messages": "Beskeder",
-    "addon.mod_chat.messageyoubeep": "Du bippede {{$a}}",
     "addon.mod_chat.modulenameplural": "Chat",
     "addon.mod_chat.mustbeonlinetosendmessages": "Du skal være online for at sende beskeder",
     "addon.mod_chat.nomessages": "Ingen beskeder endnu",
     "addon.mod_chat.nosessionsfound": "Ingen sessioner fundet",
-    "addon.mod_chat.saidto": "sagt til",
     "addon.mod_chat.send": "Send",
     "addon.mod_chat.sessionstart": "Næste chat starter {{$a.date}}, ({{$a.fromnow}} fra nu af)",
     "addon.mod_chat.showincompletesessions": "Vis ufuldstændige sessioner",
@@ -534,7 +527,6 @@
     "addon.mod_forum.addanewdiscussion": "Tilføj en ny tråd",
     "addon.mod_forum.addanewquestion": "Tilføj et nyt spørgsmål",
     "addon.mod_forum.addanewtopic": "Tilføj nyt emne",
-    "addon.mod_forum.addtofavourites": "Giv denne tråd en stjerne",
     "addon.mod_forum.advanced": "Avanceret",
     "addon.mod_forum.cannotadddiscussion": "For at oprette en ny tråd i dette forum skal man være medlem af en gruppe.",
     "addon.mod_forum.cannotadddiscussionall": "Du har ikke tilladelse til at oprette en ny tråd for alle deltagere.",
@@ -551,8 +543,6 @@
     "addon.mod_forum.errorgetgroups": "Fejl ved hentning af gruppeindstillinger.",
     "addon.mod_forum.forumnodiscussionsyet": "Der er endnu ingen indlæg i dette forum.",
     "addon.mod_forum.group": "Gruppe",
-    "addon.mod_forum.lastpost": "Seneste indlæg",
-    "addon.mod_forum.lockdiscussion": "Lås denne tråd for nye indlæg",
     "addon.mod_forum.message": "Meddelelse",
     "addon.mod_forum.modeflatnewestfirst": "Kronologisk visning med seneste indlæg først",
     "addon.mod_forum.modeflatoldestfirst": "Kronologisk visning med første indlæg først",
@@ -560,8 +550,6 @@
     "addon.mod_forum.modulenameplural": "Fora",
     "addon.mod_forum.numdiscussions": "{{numdiscussions}} diskussioner",
     "addon.mod_forum.numreplies": "{{numreplies}} svar",
-    "addon.mod_forum.pindiscussion": "Fastgør denne tråd",
-    "addon.mod_forum.pinupdated": "Fastgøringsindstillingen er opdateret",
     "addon.mod_forum.postisprivatereply": "Dette er et privat svar. Andre deltagere kan ikke se det.",
     "addon.mod_forum.posttoforum": "Send til forum",
     "addon.mod_forum.posttomygroups": "Send til alle grupper",
@@ -569,13 +557,10 @@
     "addon.mod_forum.re": "Ang:",
     "addon.mod_forum.refreshdiscussions": "Genindlæs diskussioner",
     "addon.mod_forum.refreshposts": "Genindlæs indlæg",
-    "addon.mod_forum.removefromfavourites": "Fjern stjernen fra denne tråd",
-    "addon.mod_forum.reply": "Besvar",
+    "addon.mod_forum.reply": "Svar",
     "addon.mod_forum.replyplaceholder": "Skriv dit svar...",
     "addon.mod_forum.subject": "Emne",
     "addon.mod_forum.tagarea_forum_posts": "Forumindlæg",
-    "addon.mod_forum.unlockdiscussion": "Lås denne tråd op",
-    "addon.mod_forum.unpindiscussion": "Frigør denne tråd",
     "addon.mod_forum.unread": "Ikke læst",
     "addon.mod_forum.unreadpostsnumber": "{{$a}} nye indlæg",
     "addon.mod_glossary.addentry": "Tilføj nyt opslag",
@@ -682,7 +667,7 @@
     "addon.mod_lesson.secondpluswrong": "Ikke rigtigt. Vil du prøve en gang mere?",
     "addon.mod_lesson.submit": "Aflever",
     "addon.mod_lesson.teacherjumpwarning": "Et {{$a.cluster}}-spring eller et {{$a.unseen}}-spring bliver benyttet i denne lektion. Springet \"Næste side\" vil blive brugt i stedet. Log ind som studerende for at teste disse spring.",
-    "addon.mod_lesson.teacherongoingwarning": "Løbende score vises kun for den studerende. Log ind som studerende for at teste løbende score.",
+    "addon.mod_lesson.teacherongoingwarning": "Løbende score vises kun for studerende. Log ind som studerende for at teste løbende score.",
     "addon.mod_lesson.teachertimerwarning": "Timeren virker kun for studerende. Du kan teste det ved at logge ind som studerende.",
     "addon.mod_lesson.thatsthecorrectanswer": "Rigtigt svar!  :-)",
     "addon.mod_lesson.thatsthewronganswer": "Desværre, svaret er forkert.",
@@ -829,7 +814,6 @@
     "addon.mod_scorm.organizations": "Organisationer",
     "addon.mod_scorm.passed": "Bestået",
     "addon.mod_scorm.reviewmode": "Gennemsynstilstand",
-    "addon.mod_scorm.score": "Score",
     "addon.mod_scorm.scormstatusnotdownloaded": "Denne SCORM er ikke downloadet. Den bliver automatisk downloadet når du åbner den.",
     "addon.mod_scorm.scormstatusoutdated": "Denne SCORM er ændret efter den sidste download. Den bliver automatisk downloadet når du åbner den.",
     "addon.mod_scorm.suspended": "Suspenderet",
@@ -996,7 +980,7 @@
     "assets.countries.BZ": "Belize",
     "assets.countries.CA": "Canada",
     "assets.countries.CC": "Kokos-øerne (Keeling-øerne)",
-    "assets.countries.CD": "Den Demokratiske Republik Congo",
+    "assets.countries.CD": "Demokratiske Republik Congo",
     "assets.countries.CF": "Centralafrikanske Republik",
     "assets.countries.CG": "Republikken Congo",
     "assets.countries.CH": "Schweiz",
@@ -1362,7 +1346,7 @@
     "core.courses.errorselfenrol": "En fejl opstod under selvtilmelding.",
     "core.courses.filtermycourses": "Filtrer mit kursus",
     "core.courses.frontpage": "Forside",
-    "core.courses.hidecourse": "Fjern fra visning",
+    "core.courses.hidecourse": "Vis ikke",
     "core.courses.ignore": "Ignorer",
     "core.courses.mycourses": "Mine kurser",
     "core.courses.mymoodle": "Betjeningspanel",
@@ -1381,7 +1365,7 @@
     "core.courses.searchcoursesadvice": "Du kan bruge knappen kursussøgning for at få adgang som gæst eller tilmelde dig kurser der tillader det.",
     "core.courses.selfenrolment": "Selvtilmelding",
     "core.courses.sendpaymentbutton": "Send betaling via PayPal",
-    "core.courses.show": "Gendan i visning",
+    "core.courses.show": "Vis dette kursus",
     "core.courses.totalcoursesearchresults": "Kurser i alt: {{$a}}",
     "core.currentdevice": "Aktuelle enhed",
     "core.datastoredoffline": "Der blev gemt data på enheden da det ikke kunne sendes. Det vil blive sendt senere.",
@@ -1456,7 +1440,6 @@
     "core.fileuploader.uploading": "Uploader",
     "core.fileuploader.uploadingperc": "Uploader: {{$a}}%",
     "core.fileuploader.video": "Video",
-    "core.filter": "Filter",
     "core.folder": "Mappe",
     "core.forcepasswordchangenotice": "Du skal ændre din kode inden du kan fortsætte",
     "core.fulllistofcourses": "Alle kurser",
@@ -1502,7 +1485,6 @@
     "core.login.auth_email": "E-mailbaseret godkendelse",
     "core.login.authenticating": "Godkender",
     "core.login.cancel": "Annuller",
-    "core.login.changepassword": "Skift adgangskode",
     "core.login.checksiteversion": "Tjek at dit site kører Moodle 2.4 eller nyere.",
     "core.login.confirmdeletesite": "Er du sikker på at du ønsker at slette websiden {{sitename}}?",
     "core.login.connect": "Tilslut!",
@@ -1521,7 +1503,6 @@
     "core.login.errorupdatesite": "En fejl opstod under opdatering af webstedets token.",
     "core.login.findyoursite": "Find dit site",
     "core.login.firsttime": "Er det dit første besøg?",
-    "core.login.forcepasswordchangenotice": "Du skal ændre din kode inden du kan fortsætte",
     "core.login.forgotten": "Har du glemt dit brugernavn eller din adgangskode?",
     "core.login.getanothercaptcha": "Få en anden CAPTCHA",
     "core.login.help": "Hjælp",
