--- a/assets/lang/es-mx.json
+++ b/assets/lang/es-mx.json
@@ -37,10 +37,10 @@
     "addon.block_completionstatus.pluginname": "Estatus de finalización del curso",
     "addon.block_glossaryrandom.pluginname": "Entrada aleatoria del glosario",
     "addon.block_learningplans.pluginname": "Planes de aprendizaje",
-    "addon.block_myoverview.all": "Todos (excepto quitados de la vista)",
+    "addon.block_myoverview.all": "Todos (excepto ocultos)",
     "addon.block_myoverview.favourites": "Destacados",
     "addon.block_myoverview.future": "Futuros",
-    "addon.block_myoverview.hiddencourses": "Quitado de la vista",
+    "addon.block_myoverview.hiddencourses": "Ocultos",
     "addon.block_myoverview.inprogress": "En progreso",
     "addon.block_myoverview.lastaccessed": "Último accedido",
     "addon.block_myoverview.morecourses": "Más cursos",
@@ -88,10 +88,8 @@
     "addon.calendar.calendarevent": "Evento del calendario",
     "addon.calendar.calendarevents": "Eventos del calendario",
     "addon.calendar.calendarreminders": "Recordatorios de calendario",
-    "addon.calendar.categoryevents": "Eventos de categoría",
     "addon.calendar.confirmeventdelete": "¿Está seguro de que desea eliminar el evento  \"{{$a}}\" ?",
     "addon.calendar.confirmeventseriesdelete": "El evento \"{{$a.name}}\" es parte de una serie. ¿ Quiere Usted eliminar solamente este evento, o todos los {{$a.count}} eventos en la serie ?",
-    "addon.calendar.courseevents": "Eventos de curso",
     "addon.calendar.daynext": "Día siguiente",
     "addon.calendar.dayprev": "Día anterior",
     "addon.calendar.defaultnotificationtime": "Hora de notificación por defecto",
@@ -114,7 +112,6 @@
     "addon.calendar.fri": "Vie",
     "addon.calendar.friday": "Viernes",
     "addon.calendar.gotoactivity": "Ir a la actividad",
-    "addon.calendar.groupevents": "Eventos de grupo",
     "addon.calendar.invalidtimedurationminutes": "La duración en minutos introducida no es válida; por favor, introduzca una duración en minutos mayor que 0 o seleccione sin duración.",
     "addon.calendar.invalidtimedurationuntil": "La fecha y hora seleccionadas para la duración hasta es anterior a la fecha de inicio del evento. Por favor, corríjalo antes de seguir.",
     "addon.calendar.mon": "Lun",
@@ -132,7 +129,6 @@
     "addon.calendar.sat": "Sáb",
     "addon.calendar.saturday": "Sábado",
     "addon.calendar.setnewreminder": "Configurar un nuevo recordatorio",
-    "addon.calendar.siteevents": "Eventos del sitio",
     "addon.calendar.sun": "Dom",
     "addon.calendar.sunday": "Domingo",
     "addon.calendar.thu": "Jue",
@@ -151,7 +147,6 @@
     "addon.calendar.typesite": "Evento de sitio",
     "addon.calendar.typeuser": "Evento de usuario",
     "addon.calendar.upcomingevents": "Eventos próximos",
-    "addon.calendar.userevents": "Eventos de usuario",
     "addon.calendar.wed": "Mié",
     "addon.calendar.wednesday": "Miércoles",
     "addon.calendar.when": "Cuando",
@@ -408,7 +403,6 @@
     "addon.mod_assign.timemodified": "Última modificación",
     "addon.mod_assign.timeremaining": "Tiempo restante",
     "addon.mod_assign.ungroupedusers": "La configuración de 'Requerir grupo para hacer envío' está activada y algunos usuarios, o no son miembros de ningún grupo, o son miembros de más de un grupo, por lo que no pueden hacer envíos.",
-    "addon.mod_assign.ungroupedusersoptional": "La configuración 'Estudiantes envían en grupos' está habilitada y algunos usuarios, o no son miembros de ningún grupo, o son miembros de más de un grupo. Por favor tenga en cuenta  que estos estudiantes enviarán como miembros del 'Grupo predeterminado'.",
     "addon.mod_assign.unlimitedattempts": "Ilimitados",
     "addon.mod_assign.userswhoneedtosubmit": "Usuarios que necesitan enviar: {{$a}}",
     "addon.mod_assign.userwithid": "Usuario con ID {{id}}",
@@ -437,17 +431,14 @@
     "addon.mod_chat.errorwhilegettingchatusers": "Error al obtener usuarios del chat.",
     "addon.mod_chat.errorwhileretrievingmessages": "Error al recuperar mensajes del servidor.",
     "addon.mod_chat.errorwhilesendingmessage": "Error al enviar el mensaje.",
-    "addon.mod_chat.messagebeepseveryone": "¡{{$a}} envía un beep a todos!",
     "addon.mod_chat.messagebeepsyou": "¡{{$a}} le acaba de enviar un beep!",
     "addon.mod_chat.messageenter": "{{$a}} recién entró a la sala",
     "addon.mod_chat.messageexit": "{{$a}} salió de la sala",
     "addon.mod_chat.messages": "Mensajes",
-    "addon.mod_chat.messageyoubeep": "Usted hizo señal de sonido bip {{$a}}",
     "addon.mod_chat.modulenameplural": "Chats",
     "addon.mod_chat.mustbeonlinetosendmessages": "Usted debe de estar en-línea para enviar mensajes.",
     "addon.mod_chat.nomessages": "Aún no hay mensajes",
     "addon.mod_chat.nosessionsfound": "No se encontraron sesiones",
-    "addon.mod_chat.saidto": "dicho a",
     "addon.mod_chat.send": "Enviar",
     "addon.mod_chat.sessionstart": "La siguiente sesión de chat comenzará en {{$a.date}},  dentro de ({{$a.fromnow}} a partir de ahora)",
     "addon.mod_chat.showincompletesessions": "Mostrar sesiones incompletas",
@@ -587,7 +578,6 @@
     "addon.mod_forum.favouriteupdated": "Su opción de estrella ha sido actualizada.",
     "addon.mod_forum.forumnodiscussionsyet": "Todavía no hay tópicos de discusión en este foro.",
     "addon.mod_forum.group": "Grupo",
-    "addon.mod_forum.lastpost": "Último mensaje",
     "addon.mod_forum.lockdiscussion": "Bloquear esta discusión",
     "addon.mod_forum.lockupdated": "La opción para bloquear ha sido actualizada.",
     "addon.mod_forum.message": "Mensaje",
@@ -616,7 +606,7 @@
     "addon.mod_forum.unlockdiscussion": "Des-bloquear esta discusión",
     "addon.mod_forum.unpindiscussion": "Quitar fijación de esta discusión",
     "addon.mod_forum.unread": "No leído",
-    "addon.mod_forum.unreadpostsnumber": "{{$a}} mensaje(s) no leído(s)",
+    "addon.mod_forum.unreadpostsnumber": "{{$a}} mensajes no leídos",
     "addon.mod_glossary.addentry": "Añadir una nueva entrada",
     "addon.mod_glossary.aliases": "Palabra(s) clave",
     "addon.mod_glossary.attachment": "Adjunto",
@@ -871,7 +861,6 @@
     "addon.mod_scorm.organizations": "Organizaciones",
     "addon.mod_scorm.passed": "Pasado",
     "addon.mod_scorm.reviewmode": "Modo Revisión",
-    "addon.mod_scorm.score": "Puntuación",
     "addon.mod_scorm.scormstatusnotdownloaded": "Este paquete SCORM no está descargado. Será descargado automáticamente cuando Usted lo abra.",
     "addon.mod_scorm.scormstatusoutdated": "Este paquete SCORM ha sido modificado desde la última descarga. Será descargado automáticamente cuando Usted lo abra.",
     "addon.mod_scorm.suspended": "Suspendido",
@@ -1033,7 +1022,7 @@
     "assets.countries.BL": "San Bartolomé",
     "assets.countries.BM": "Bermuda",
     "assets.countries.BN": "Brunei Darussalam",
-    "assets.countries.BO": "Bolivia (Estado Plurinacional de)",
+    "assets.countries.BO": "Estado Plurinacional de Bolivia",
     "assets.countries.BQ": "Bonaire, Sint Eustatius And Saba",
     "assets.countries.BR": "Brasil",
     "assets.countries.BS": "Bahamas",
@@ -1044,7 +1033,7 @@
     "assets.countries.BZ": "Belice",
     "assets.countries.CA": "Canadá",
     "assets.countries.CC": "Islas Cocos",
-    "assets.countries.CD": "Congo (la República Democrática del)",
+    "assets.countries.CD": "Congo, República Democrática del",
     "assets.countries.CF": "República Centroafricana",
     "assets.countries.CG": "Congo",
     "assets.countries.CH": "Suiza",
@@ -1077,7 +1066,7 @@
     "assets.countries.FI": "Finlandia",
     "assets.countries.FJ": "Fiyi",
     "assets.countries.FK": "Islas Malvinas",
-    "assets.countries.FM": "Micronesia (Estados Federados de)",
+    "assets.countries.FM": "Micronesia",
     "assets.countries.FO": "Islas Faroe",
     "assets.countries.FR": "Francia",
     "assets.countries.GA": "Gabón",
@@ -1094,7 +1083,7 @@
     "assets.countries.GP": "Guadalupe",
     "assets.countries.GQ": "Guinea Ecuatorial",
     "assets.countries.GR": "Grecia",
-    "assets.countries.GS": "Georgia del Sur y las Islas Sandwich del Sur",
+    "assets.countries.GS": "Georgia del Sur e Islas Sandwich del Sur",
     "assets.countries.GT": "Guatemala",
     "assets.countries.GU": "Guam",
     "assets.countries.GW": "Guinea-Bissau",
@@ -1112,7 +1101,7 @@
     "assets.countries.IN": "India",
     "assets.countries.IO": "Territorio Británico del Océano Índico",
     "assets.countries.IQ": "Irak",
-    "assets.countries.IR": "Irán (República Islámica de)",
+    "assets.countries.IR": "Irán",
     "assets.countries.IS": "Islandia",
     "assets.countries.IT": "Italia",
     "assets.countries.JE": "Jersey",
@@ -1124,9 +1113,9 @@
     "assets.countries.KH": "Camboya",
     "assets.countries.KI": "Kiribati",
     "assets.countries.KM": "Comoras",
-    "assets.countries.KN": "San Cristóbal y Nevis",
-    "assets.countries.KP": "Corea (la República Democrática del Pueblo de)",
-    "assets.countries.KR": "Corea (la República de)",
+    "assets.countries.KN": "San Cristóbal Nevis",
+    "assets.countries.KP": "Corea del Norte",
+    "assets.countries.KR": "Corea del Sur",
     "assets.countries.KW": "Kuwait",
     "assets.countries.KY": "Islas Caimán",
     "assets.countries.KZ": "Kazajstán",
@@ -1143,12 +1132,12 @@
     "assets.countries.LY": "Libia",
     "assets.countries.MA": "Marruecos",
     "assets.countries.MC": "Mónaco",
-    "assets.countries.MD": "Moldovia (la República de)",
+    "assets.countries.MD": "Moldovia",
     "assets.countries.ME": "Montenegro",
     "assets.countries.MF": "San Martín (Porción Francesa)",
     "assets.countries.MG": "Madagascar",
     "assets.countries.MH": "Islas Marshall",
-    "assets.countries.MK": "Macedonia del Norte",
+    "assets.countries.MK": "Macedonia",
     "assets.countries.ML": "Mali",
     "assets.countries.MM": "Myanmar",
     "assets.countries.MN": "Mongolia",
@@ -1205,7 +1194,7 @@
     "assets.countries.SG": "Singapur",
     "assets.countries.SH": "Santa Helena, Ascención y Tristan Da Cunha",
     "assets.countries.SI": "Eslovenia",
-    "assets.countries.SJ": "Svalbard y Jan Mayen",
+    "assets.countries.SJ": "Islas Svalbard y Jan Mayen",
     "assets.countries.SK": "Eslovaquia",
     "assets.countries.SL": "Sierra Leona",
     "assets.countries.SM": "San Marino",
@@ -1217,7 +1206,7 @@
     "assets.countries.SV": "El Salvador",
     "assets.countries.SX": "Sint Maarten (Porción Holandesa)",
     "assets.countries.SY": "Siria",
-    "assets.countries.SZ": "Eswatini",
+    "assets.countries.SZ": "Swazilandia",
     "assets.countries.TC": "Islas Turcas y Caicos",
     "assets.countries.TD": "Chad",
     "assets.countries.TF": "Territorios Franceses del Sur",
@@ -1233,7 +1222,7 @@
     "assets.countries.TT": "Trinidad y Tobago",
     "assets.countries.TV": "Tuvalu",
     "assets.countries.TW": "Taiwán",
-    "assets.countries.TZ": "Tanzania, la República Unida de",
+    "assets.countries.TZ": "Tanzania",
     "assets.countries.UA": "Ucrania",
     "assets.countries.UG": "Uganda",
     "assets.countries.UM": "Islas Ultramarinas Menores de Estados Unidos",
@@ -1242,12 +1231,12 @@
     "assets.countries.UZ": "Uzbekistan",
     "assets.countries.VA": "El Vaticano",
     "assets.countries.VC": "San Vincente y Las Granadinas",
-    "assets.countries.VE": "Venezuela (República Bolivariana de)",
+    "assets.countries.VE": "Venezuela, República Bolivariana de",
     "assets.countries.VG": "Islas Vírgenes (Británícas)",
     "assets.countries.VI": "Islas Vírgenes (Americanas)",
     "assets.countries.VN": "Vietnam",
     "assets.countries.VU": "Vanuatu",
-    "assets.countries.WF": "Wallis y Futuna",
+    "assets.countries.WF": "Islas Wallis y Futuna",
     "assets.countries.WS": "Samoa",
     "assets.countries.YE": "Yemen",
     "assets.countries.YT": "Mayotte",
@@ -1423,7 +1412,7 @@
     "core.courses.errorselfenrol": "Ocurrio un error al auto-inscribir.",
     "core.courses.filtermycourses": "Filtrar mis cursos",
     "core.courses.frontpage": "Portada",
-    "core.courses.hidecourse": "Quitar de la vista",
+    "core.courses.hidecourse": "Ocultar de vista",
     "core.courses.ignore": "Ignorar",
     "core.courses.mycourses": "Mis cursos",
     "core.courses.mymoodle": "Tablero",
@@ -1442,7 +1431,7 @@
     "core.courses.searchcoursesadvice": "Usted puede usar el botón de 'buscar cursos' para encontrar cursos a los cuales acceder como un invitado o para inscribirse Usted mismo en los cursos que lo permitan.",
     "core.courses.selfenrolment": "Auto-inscripción",
     "core.courses.sendpaymentbutton": "Enviar pago por Paypal",
-    "core.courses.show": "Restaurar para verlo",
+    "core.courses.show": "Mostrar este curso",
     "core.courses.totalcoursesearchresults": "Total de cursos: {{$a}}",
     "core.currentdevice": "Dispositivo actual",
     "core.datastoredoffline": "Los datos se almacenaron en el dispositivo debido a que no se pudieron enviar. Serán enviados automáticamente más tarde.",
@@ -1521,7 +1510,6 @@
     "core.fileuploader.uploading": "Subiendo",
     "core.fileuploader.uploadingperc": "Subiendo: {{$a}}%",
     "core.fileuploader.video": "Video",
-    "core.filter": "Filtro",
     "core.folder": "Carpeta",
     "core.forcepasswordchangenotice": "Para continuar, deberá cambiar su contraseña.",
     "core.fulllistofcourses": "Todos los cursos",
@@ -1568,7 +1556,6 @@
     "core.login.auth_email": "Auto-registro basado en Email",
     "core.login.authenticating": "Autenticando",
     "core.login.cancel": "Cancelar",
-    "core.login.changepassword": "Cambiar contraseña",
     "core.login.checksiteversion": "Revisar que su sitio usa Moodle 2.4 o más reciente.",
     "core.login.confirmdeletesite": "¿Está seguro de querer eliminar el sitio {{sitename}}?",
     "core.login.connect": "¡Conectar!",
@@ -1590,7 +1577,6 @@
     "core.login.errorupdatesite": "Ocurrió un error al actualizar la ficha (''token'') del sitio",
     "core.login.findyoursite": "Encuentre su sitio",
     "core.login.firsttime": "Registrarse como usuario",
-    "core.login.forcepasswordchangenotice": "Para continuar, deberá cambiar su contraseña.",
     "core.login.forgotten": "¿Olvidó su nombre_de_usuario o contraseña?",
     "core.login.getanothercaptcha": "Obtener otro CAPTCHA",
     "core.login.help": "Ayuda",
@@ -1667,7 +1653,7 @@
     "core.mainmenu.help": "Ayuda",
     "core.mainmenu.logout": "Salir",
     "core.mainmenu.website": "Página web",
-    "core.maxsizeandattachments": "Tamaño máximo para archivos: {{$a.size}}, número máximo de archivos: {{$a.attachments}}",
+    "core.maxsizeandattachments": "Tamaño máximo para archivos nuevos: {{$a.size}}, anexos máximos: {{$a.attachments}}",
     "core.min": "minutos",
     "core.mins": "minutos",
     "core.misc": "Misceláneos",
