--- a/assets/lang/sr-cr.json
+++ b/assets/lang/sr-cr.json
@@ -84,10 +84,8 @@
     "addon.calendar.allday": "Цео дан",
     "addon.calendar.calendar": "Календар",
     "addon.calendar.calendarevents": "Догађаји у календару",
-    "addon.calendar.categoryevents": "Догађаји на нивоу категорије",
     "addon.calendar.confirmeventdelete": "Да ли  сте сигурни да желите да обришете догађај \"{{$a}}\"?",
     "addon.calendar.confirmeventseriesdelete": "Догађај \"{{$a.name}}\" је део низа. Да ли желите да обришете само овај или све догађаје (укупно: {{$a.count}}) у низу?",
-    "addon.calendar.courseevents": "Догађаји на нивоу курса",
     "addon.calendar.daynext": "Следећи дан",
     "addon.calendar.dayprev": "Претходни дан",
     "addon.calendar.defaultnotificationtime": "Подразумевано време за слање обавештења",
@@ -110,7 +108,6 @@
     "addon.calendar.fri": "Пет",
     "addon.calendar.friday": "Петак",
     "addon.calendar.gotoactivity": "Иди на активност",
-    "addon.calendar.groupevents": "Групни догађаји",
     "addon.calendar.invalidtimedurationminutes": "Трајање у минутима које сте унели није исправно. Молимо унесите трајање у минутима веће од 0 или изаберите 'Нема одређено трајање'.",
     "addon.calendar.invalidtimedurationuntil": "Датум и време које сте одабрали за завршетак догађаја је пре датума и времена његовог почетка. Молимо исправите ово пре него што наставите.",
     "addon.calendar.mon": "Пон",
@@ -126,7 +123,6 @@
     "addon.calendar.repeatweeksl": "Седмично понављање, потпуно креирање",
     "addon.calendar.sat": "Суб",
     "addon.calendar.saturday": "Субота",
-    "addon.calendar.siteevents": "Прикажи догађаје на нивоу сајта",
     "addon.calendar.sun": "Нед",
     "addon.calendar.sunday": "Недеља",
     "addon.calendar.thu": "Чет",
@@ -145,7 +141,6 @@
     "addon.calendar.typesite": "Догађај на нивоу сајта",
     "addon.calendar.typeuser": "Кориснички догађај",
     "addon.calendar.upcomingevents": "Предстојећи догађаји",
-    "addon.calendar.userevents": "Кориснички догађаји",
     "addon.calendar.wed": "Сре",
     "addon.calendar.wednesday": "Среда",
     "addon.calendar.when": "Када",
@@ -400,7 +395,6 @@
     "addon.mod_assign.timemodified": "Последње измене",
     "addon.mod_assign.timeremaining": "Преостало време",
     "addon.mod_assign.ungroupedusers": "Подешавање 'Неопходна је група за предају рада' је омогућено, али неки корисници нису чланови ниједне групе, или су чланови више од једне групе, тако да не могу да предају рад.",
-    "addon.mod_assign.ungroupedusersoptional": "Подешавање \"Полазници предају у групама\" је омогућено а неки корисници или нису чланови ниједне групе или су чланови више група. Молимо узмите у обзир да ће ти полазници предати решење задатка као чланови \"Подразумеване групе\".",
     "addon.mod_assign.unlimitedattempts": "Неограничено",
     "addon.mod_assign.userswhoneedtosubmit": "Корисници који треба да предају решење: {{$a}}",
     "addon.mod_assign.userwithid": "Корисник са ID ознаком  {{id}}",
@@ -429,16 +423,13 @@
     "addon.mod_chat.errorwhilegettingchatusers": "Грешка приликом преузимања корисника причаонице.",
     "addon.mod_chat.errorwhileretrievingmessages": "Грешка приликом преузимања порука са сервера.",
     "addon.mod_chat.errorwhilesendingmessage": "Грешка приликом слања поруке.",
-    "addon.mod_chat.messagebeepseveryone": "{{$a}} поздравља све звучним сигналом!",
     "addon.mod_chat.messagebeepsyou": "{{$a}} вас је управо поздравио/ла звучним сигналом!",
     "addon.mod_chat.messageenter": "Учесник {{$a}} управо улази у причаоницу",
     "addon.mod_chat.messageexit": "Учесник {{$a}} управо напушта причаоницу",
     "addon.mod_chat.messages": "Поруке",
-    "addon.mod_chat.messageyoubeep": "Поздравили сте звучним сигналом {{$a}}",
     "addon.mod_chat.modulenameplural": "Причаонице",
     "addon.mod_chat.mustbeonlinetosendmessages": "Морате бити онлајн како бисте слали поруке.",
     "addon.mod_chat.nomessages": "Још нема порука",
-    "addon.mod_chat.saidto": "<b>речено учеснику</b>",
     "addon.mod_chat.send": "Пошаљи",
     "addon.mod_chat.sessionstart": "Следећа сесија ће почети дана {{$a.date}}, ({{$a.fromnow}} од сада)",
     "addon.mod_chat.talk": "Причај",
@@ -574,7 +565,6 @@
     "addon.mod_forum.favouriteupdated": "Ваша опција за означавање звездицом је ажурирана.",
     "addon.mod_forum.forumnodiscussionsyet": "Још нема тема за дискусију на овом форуму.",
     "addon.mod_forum.group": "Група",
-    "addon.mod_forum.lastpost": "Последња порука",
     "addon.mod_forum.lockdiscussion": "Закључај ову дискусију",
     "addon.mod_forum.lockupdated": "Опција за закључавања је ажурирана.",
     "addon.mod_forum.message": "Порука",
@@ -856,7 +846,6 @@
     "addon.mod_scorm.organizations": "Организације",
     "addon.mod_scorm.passed": "Положено",
     "addon.mod_scorm.reviewmode": "Режим прегледа",
-    "addon.mod_scorm.score": "Резултат",
     "addon.mod_scorm.scormstatusnotdownloaded": "Овај SCORM пакет није преузет. Биће аутоматски преузет када га отворите.",
     "addon.mod_scorm.scormstatusoutdated": "Овај SCORM пакет је мењан од последњег преузимања. Биће аутоматски преузет када га отворите.",
     "addon.mod_scorm.suspended": "Суспендовано",
@@ -1013,7 +1002,7 @@
     "assets.countries.BL": "Острво Свети Бартоломеј",
     "assets.countries.BM": "Бермуда",
     "assets.countries.BN": "Брунеј",
-    "assets.countries.BO": "Боливија, Вишенационална Држава",
+    "assets.countries.BO": "Боливија",
     "assets.countries.BQ": "Бонер, Свети Еустахије и Саба",
     "assets.countries.BR": "Бразил",
     "assets.countries.BS": "Бахами",
@@ -1128,7 +1117,7 @@
     "assets.countries.MF": "Свети Мартин (француски део)",
     "assets.countries.MG": "Мадагаскар",
     "assets.countries.MH": "Маршалска Острва",
-    "assets.countries.MK": "Северна Македонија",
+    "assets.countries.MK": "Македонија",
     "assets.countries.ML": "Мали",
     "assets.countries.MM": "Мјанмар",
     "assets.countries.MN": "Монголија",
@@ -1167,7 +1156,7 @@
     "assets.countries.PM": "Свети Пјер и Микелон",
     "assets.countries.PN": "Питкаирн",
     "assets.countries.PR": "Порторико",
-    "assets.countries.PS": "Палестина, Држава",
+    "assets.countries.PS": "Палестина",
     "assets.countries.PT": "Португалија",
     "assets.countries.PW": "Палау",
     "assets.countries.PY": "Парагвај",
@@ -1222,7 +1211,7 @@
     "assets.countries.UZ": "Узбекистан",
     "assets.countries.VA": "Ватикан",
     "assets.countries.VC": "Свети Винсент и Гренадини",
-    "assets.countries.VE": "Венецуела,  Боливарска Република",
+    "assets.countries.VE": "Венецуела",
     "assets.countries.VG": "Британска Девичанска острва",
     "assets.countries.VI": "Америчка Девичанска Острва",
     "assets.countries.VN": "Вијетнам",
@@ -1488,7 +1477,6 @@
     "core.fileuploader.uploading": "Отпремање",
     "core.fileuploader.uploadingperc": "Отпремање: {{$a}}%",
     "core.fileuploader.video": "Видео",
-    "core.filter": "Филтер",
     "core.folder": "Директоријум",
     "core.forcepasswordchangenotice": "Морате променити своју лозинку да бисте наставили",
     "core.fulllistofcourses": "Сви курсеви",
@@ -1535,7 +1523,6 @@
     "core.login.auth_email": "Самостална регистрација путем е-поште",
     "core.login.authenticating": "Провера идентитета",
     "core.login.cancel": "Одустани",
-    "core.login.changepassword": "Промени лозинку",
     "core.login.checksiteversion": "Проверите да ли ваш сајт користи Moodle 2.4 или новију верзију.",
     "core.login.confirmdeletesite": "Да ли сте сигурни да желите да обришете сајт {{sitename}}?",
     "core.login.connect": "Повежите се!",
@@ -1555,7 +1542,6 @@
     "core.login.errorupdatesite": "Дошло је до грешке приликом ажурирању токена сајта.",
     "core.login.findyoursite": "Пронађите свој сајт",
     "core.login.firsttime": "Да ли сте овде први пут?",
-    "core.login.forcepasswordchangenotice": "Морате променити своју лозинку да бисте наставили",
     "core.login.forgotten": "Заборавили сте своје корисничко име или лозинку?",
     "core.login.getanothercaptcha": "Преузмите други CAPTCHА",
     "core.login.help": "Помоћ",
