--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -37,10 +37,10 @@
     "addon.block_completionstatus.pluginname": "Course completion status",
     "addon.block_glossaryrandom.pluginname": "Random glossary entry",
     "addon.block_learningplans.pluginname": "Learning plans",
-    "addon.block_myoverview.all": "All (except removed from view)",
+    "addon.block_myoverview.all": "All (except hidden)",
     "addon.block_myoverview.favourites": "Starred",
     "addon.block_myoverview.future": "Future",
-    "addon.block_myoverview.hiddencourses": "Removed from view",
+    "addon.block_myoverview.hiddencourses": "Hidden",
     "addon.block_myoverview.inprogress": "In progress",
     "addon.block_myoverview.lastaccessed": "Last accessed",
     "addon.block_myoverview.morecourses": "More courses",
@@ -1011,7 +1011,7 @@
     "assets.countries.AD": "Andorra",
     "assets.countries.AE": "United Arab Emirates",
     "assets.countries.AF": "Afghanistan",
-    "assets.countries.AG": "Antigua and Barbuda",
+    "assets.countries.AG": "Antigua And Barbuda",
     "assets.countries.AI": "Anguilla",
     "assets.countries.AL": "Albania",
     "assets.countries.AM": "Armenia",
@@ -1024,7 +1024,7 @@
     "assets.countries.AW": "Aruba",
     "assets.countries.AX": "Åland Islands",
     "assets.countries.AZ": "Azerbaijan",
-    "assets.countries.BA": "Bosnia and Herzegovina",
+    "assets.countries.BA": "Bosnia And Herzegovina",
     "assets.countries.BB": "Barbados",
     "assets.countries.BD": "Bangladesh",
     "assets.countries.BE": "Belgium",
@@ -1036,8 +1036,8 @@
     "assets.countries.BL": "Saint Barthélemy",
     "assets.countries.BM": "Bermuda",
     "assets.countries.BN": "Brunei Darussalam",
-    "assets.countries.BO": "Bolivia (Plurinational State of)",
-    "assets.countries.BQ": "Bonaire, Sint Eustatius and Saba",
+    "assets.countries.BO": "Bolivia, Plurinational State Of",
+    "assets.countries.BQ": "Bonaire, Sint Eustatius And Saba",
     "assets.countries.BR": "Brazil",
     "assets.countries.BS": "Bahamas",
     "assets.countries.BT": "Bhutan",
@@ -1047,7 +1047,7 @@
     "assets.countries.BZ": "Belize",
     "assets.countries.CA": "Canada",
     "assets.countries.CC": "Cocos (Keeling) Islands",
-    "assets.countries.CD": "Congo (the Democratic Republic of the)",
+    "assets.countries.CD": "Congo, The Democratic Republic Of The",
     "assets.countries.CF": "Central African Republic",
     "assets.countries.CG": "Congo",
     "assets.countries.CH": "Switzerland",
@@ -1080,7 +1080,7 @@
     "assets.countries.FI": "Finland",
     "assets.countries.FJ": "Fiji",
     "assets.countries.FK": "Falkland Islands (Malvinas)",
-    "assets.countries.FM": "Micronesia (Federated States of)",
+    "assets.countries.FM": "Micronesia, Federated States Of",
     "assets.countries.FO": "Faroe Islands",
     "assets.countries.FR": "France",
     "assets.countries.GA": "Gabon",
@@ -1097,13 +1097,13 @@
     "assets.countries.GP": "Guadeloupe",
     "assets.countries.GQ": "Equatorial Guinea",
     "assets.countries.GR": "Greece",
-    "assets.countries.GS": "South Georgia and the South Sandwich Islands",
+    "assets.countries.GS": "South Georgia And The South Sandwich Islands",
     "assets.countries.GT": "Guatemala",
     "assets.countries.GU": "Guam",
     "assets.countries.GW": "Guinea-Bissau",
     "assets.countries.GY": "Guyana",
     "assets.countries.HK": "Hong Kong",
-    "assets.countries.HM": "Heard Island and McDonald Islands",
+    "assets.countries.HM": "Heard Island And Mcdonald Islands",
     "assets.countries.HN": "Honduras",
     "assets.countries.HR": "Croatia",
     "assets.countries.HT": "Haiti",
@@ -1111,11 +1111,11 @@
     "assets.countries.ID": "Indonesia",
     "assets.countries.IE": "Ireland",
     "assets.countries.IL": "Israel",
-    "assets.countries.IM": "Isle of Man",
+    "assets.countries.IM": "Isle Of Man",
     "assets.countries.IN": "India",
     "assets.countries.IO": "British Indian Ocean Territory",
     "assets.countries.IQ": "Iraq",
-    "assets.countries.IR": "Iran (Islamic Republic of)",
+    "assets.countries.IR": "Iran, Islamic Republic Of",
     "assets.countries.IS": "Iceland",
     "assets.countries.IT": "Italy",
     "assets.countries.JE": "Jersey",
@@ -1127,9 +1127,9 @@
     "assets.countries.KH": "Cambodia",
     "assets.countries.KI": "Kiribati",
     "assets.countries.KM": "Comoros",
-    "assets.countries.KN": "Saint Kitts and Nevis",
-    "assets.countries.KP": "Korea (the Democratic People's Republic of)",
-    "assets.countries.KR": "Korea (the Republic of)",
+    "assets.countries.KN": "Saint Kitts And Nevis",
+    "assets.countries.KP": "Korea, Democratic People's Republic Of",
+    "assets.countries.KR": "Korea, Republic Of",
     "assets.countries.KW": "Kuwait",
     "assets.countries.KY": "Cayman Islands",
     "assets.countries.KZ": "Kazakhstan",
@@ -1146,12 +1146,12 @@
     "assets.countries.LY": "Libya",
     "assets.countries.MA": "Morocco",
     "assets.countries.MC": "Monaco",
-    "assets.countries.MD": "Moldova (the Republic of)",
+    "assets.countries.MD": "Moldova, Republic Of",
     "assets.countries.ME": "Montenegro",
-    "assets.countries.MF": "Saint Martin (French part)",
+    "assets.countries.MF": "Saint Martin (French Part)",
     "assets.countries.MG": "Madagascar",
     "assets.countries.MH": "Marshall Islands",
-    "assets.countries.MK": "North Macedonia",
+    "assets.countries.MK": "Macedonia, The Former Yugoslav Republic Of",
     "assets.countries.ML": "Mali",
     "assets.countries.MM": "Myanmar",
     "assets.countries.MN": "Mongolia",
@@ -1187,10 +1187,10 @@
     "assets.countries.PH": "Philippines",
     "assets.countries.PK": "Pakistan",
     "assets.countries.PL": "Poland",
-    "assets.countries.PM": "Saint Pierre and Miquelon",
+    "assets.countries.PM": "Saint Pierre And Miquelon",
     "assets.countries.PN": "Pitcairn",
     "assets.countries.PR": "Puerto Rico",
-    "assets.countries.PS": "Palestine, State of",
+    "assets.countries.PS": "Palestine, State Of",
     "assets.countries.PT": "Portugal",
     "assets.countries.PW": "Palau",
     "assets.countries.PY": "Paraguay",
@@ -1206,9 +1206,9 @@
     "assets.countries.SD": "Sudan",
     "assets.countries.SE": "Sweden",
     "assets.countries.SG": "Singapore",
-    "assets.countries.SH": "Saint Helena, Ascension and Tristan da Cunha",
+    "assets.countries.SH": "Saint Helena, Ascension And Tristan Da Cunha",
     "assets.countries.SI": "Slovenia",
-    "assets.countries.SJ": "Svalbard and Jan Mayen",
+    "assets.countries.SJ": "Svalbard And Jan Mayen",
     "assets.countries.SK": "Slovakia",
     "assets.countries.SL": "Sierra Leone",
     "assets.countries.SM": "San Marino",
@@ -1216,12 +1216,12 @@
     "assets.countries.SO": "Somalia",
     "assets.countries.SR": "Suriname",
     "assets.countries.SS": "South Sudan",
-    "assets.countries.ST": "Sao Tome and Principe",
+    "assets.countries.ST": "Sao Tome And Principe",
     "assets.countries.SV": "El Salvador",
-    "assets.countries.SX": "Sint Maarten (Dutch part)",
+    "assets.countries.SX": "Sint Maarten (Dutch Part)",
     "assets.countries.SY": "Syrian Arab Republic",
-    "assets.countries.SZ": "Eswatini",
-    "assets.countries.TC": "Turks and Caicos Islands",
+    "assets.countries.SZ": "Swaziland",
+    "assets.countries.TC": "Turks And Caicos Islands",
     "assets.countries.TD": "Chad",
     "assets.countries.TF": "French Southern Territories",
     "assets.countries.TG": "Togo",
@@ -1233,24 +1233,24 @@
     "assets.countries.TN": "Tunisia",
     "assets.countries.TO": "Tonga",
     "assets.countries.TR": "Turkey",
-    "assets.countries.TT": "Trinidad and Tobago",
+    "assets.countries.TT": "Trinidad And Tobago",
     "assets.countries.TV": "Tuvalu",
     "assets.countries.TW": "Taiwan",
-    "assets.countries.TZ": "Tanzania, the United Republic of",
+    "assets.countries.TZ": "Tanzania, United Republic Of",
     "assets.countries.UA": "Ukraine",
     "assets.countries.UG": "Uganda",
     "assets.countries.UM": "United States Minor Outlying Islands",
     "assets.countries.US": "United States",
     "assets.countries.UY": "Uruguay",
     "assets.countries.UZ": "Uzbekistan",
-    "assets.countries.VA": "Holy See",
-    "assets.countries.VC": "Saint Vincent and the Grenadines",
-    "assets.countries.VE": "Venezuela (Bolivarian Republic of)",
-    "assets.countries.VG": "Virgin Islands (British)",
-    "assets.countries.VI": "Virgin Islands (U.S.)",
+    "assets.countries.VA": "Holy See (Vatican City State)",
+    "assets.countries.VC": "Saint Vincent And The Grenadines",
+    "assets.countries.VE": "Venezuela, Bolivarian Republic Of",
+    "assets.countries.VG": "Virgin Islands, British",
+    "assets.countries.VI": "Virgin Islands, U.S.",
     "assets.countries.VN": "Viet Nam",
     "assets.countries.VU": "Vanuatu",
-    "assets.countries.WF": "Wallis and Futuna",
+    "assets.countries.WF": "Wallis And Futuna",
     "assets.countries.WS": "Samoa",
     "assets.countries.YE": "Yemen",
     "assets.countries.YT": "Mayotte",
@@ -1260,7 +1260,7 @@
     "assets.mimetypes.application/epub_zip": "EPUB ebook",
     "assets.mimetypes.application/msword": "Word document",
     "assets.mimetypes.application/pdf": "PDF document",
-    "assets.mimetypes.application/vnd.moodle.backup": "Moodle backup",
+    "assets.mimetypes.application/vnd.moodle.backup": "LSP backup",
     "assets.mimetypes.application/vnd.ms-excel": "Excel spreadsheet",
     "assets.mimetypes.application/vnd.ms-excel.sheet.macroEnabled.12": "Excel 2007 macro-enabled workbook",
     "assets.mimetypes.application/vnd.ms-powerpoint": "Powerpoint presentation",
@@ -1323,7 +1323,7 @@
     "core.back": "Back",
     "core.block.blocks": "Blocks",
     "core.cancel": "Cancel",
-    "core.cannotconnect": "Cannot connect: Verify that you have correctly typed the URL and that your site uses Moodle 3.1 or later.",
+    "core.cannotconnect": "Cannot connect: Verify that you have correctly typed the URL and that your site uses LSP 3.1 or later.",
     "core.cannotdownloadfiles": "File downloading is disabled. Please contact your site administrator.",
     "core.captureaudio": "Record audio",
     "core.capturedimage": "Taken picture.",
@@ -1378,9 +1378,9 @@
     "core.course": "Course",
     "core.course.activitydisabled": "Your organisation has disabled this activity in the mobile app.",
     "core.course.activitynotyetviewableremoteaddon": "Your organisation installed a plugin that is not yet supported.",
-    "core.course.activitynotyetviewablesiteupgradeneeded": "Your organisation's Moodle installation needs to be updated.",
+    "core.course.activitynotyetviewablesiteupgradeneeded": "Your organisation's LSP installation needs to be updated.",
     "core.course.allsections": "All sections",
-    "core.course.askadmintosupport": "Contact the site administrator and tell them you want to use this activity with the Moodle Mobile app.",
+    "core.course.askadmintosupport": "Contact the site administrator and tell them you want to use this activity with the LSP Mobile app.",
     "core.course.availablespace": " You currently have about {{available}} free space.",
     "core.course.confirmdeletemodulefiles": "Are you sure you want to delete these files?",
     "core.course.confirmdownload": "You are about to download {{size}}.{{availableSpace}} Are you sure you want to continue?",
@@ -1425,7 +1425,7 @@
     "core.courses.errorselfenrol": "An error occurred while self enrolling.",
     "core.courses.filtermycourses": "Filter my courses",
     "core.courses.frontpage": "Front page",
-    "core.courses.hidecourse": "Remove from view",
+    "core.courses.hidecourse": "Hide from view",
     "core.courses.ignore": "Ignore",
     "core.courses.mycourses": "My courses",
     "core.courses.mymoodle": "Dashboard",
@@ -1444,7 +1444,7 @@
     "core.courses.searchcoursesadvice": "You can use the search courses button to find courses to access as a  guest or enrol yourself in courses that allow it.",
     "core.courses.selfenrolment": "Self enrolment",
     "core.courses.sendpaymentbutton": "Send payment via PayPal",
-    "core.courses.show": "Restore to view",
+    "core.courses.show": "Show this course",
     "core.courses.totalcoursesearchresults": "Total courses: {{$a}}",
     "core.currentdevice": "Current device",
     "core.datastoredoffline": "Data stored in the device because it couldn't be sent. It will be sent automatically later.",
@@ -1576,12 +1576,12 @@
     "core.login.changepasswordinstructions": "You cannot change your password in the app. Please click the following button to open the site in a web browser to change your password. Take into account you need to close the browser after changing the password as you will not be redirected to the app.",
     "core.login.changepasswordlogoutinstructions": "If you prefer to change site or log out, please click the following button:",
     "core.login.changepasswordreconnectinstructions": "Click the following button to reconnect to the site. (Take into account that if you didn't change your password successfully, you would return to the previous screen).",
-    "core.login.checksiteversion": "Check that your site uses Moodle 3.1 or later.",
+    "core.login.checksiteversion": "Check that your site uses LSP 3.1 or later.",
     "core.login.confirmdeletesite": "Are you sure you want to delete the site {{sitename}}?",
     "core.login.connect": "Connect!",
-    "core.login.connecttomoodle": "Connect to Moodle",
-    "core.login.connecttomoodleapp": "You are trying to connect to a regular Moodle site. Please download the official Moodle app to access this site.",
-    "core.login.connecttoworkplaceapp": "You are trying to connect to a Moodle Workplace site. Please download the Moodle Workplace app to access this site.",
+    "core.login.connecttomoodle": "Connect to LSP",
+    "core.login.connecttomoodleapp": "You are trying to connect to a regular LSP site. Please download the official LSP app to access this site.",
+    "core.login.connecttoworkplaceapp": "You are trying to connect to a LSP Workplace site. Please download the LSP Workplace app to access this site.",
     "core.login.contactyouradministrator": "Contact your site administrator for further help.",
     "core.login.contactyouradministratorissue": "Please ask your site administrator to check the following issue: {{$a}}",
     "core.login.createaccount": "Create my new account",
@@ -1601,18 +1601,18 @@
     "core.login.forgotten": "Forgotten your username or password?",
     "core.login.getanothercaptcha": "Get another CAPTCHA",
     "core.login.help": "Help",
-    "core.login.helpmelogin": "<p>There are many thousands of Moodle sites around the world. This app can only connect to Moodle sites that have specifically enabled Mobile app access.</p><p>If you can't connect to your Moodle site then you need to contact your site administrator and ask them to read <a href=\"http://docs.moodle.org/en/Mobile_app\" target=\"_blank\">http://docs.moodle.org/en/Mobile_app</a></p><p>To test the app in a Moodle demo site type <i>teacher</i> or <i>student</i> in the <i>Site address</i> field and click the <b>Connect button</b>.</p>",
+    "core.login.helpmelogin": "<p>There are many thousands of LSP sites around the world. This app can only connect to LSP sites that have specifically enabled Mobile app access.</p><p>If you can't connect to your LSP site then you need to contact your site administrator and ask them to read <a href=\"http://docs.moodle.org/en/Mobile_app\" target=\"_blank\">http://docs.moodle.org/en/Mobile_app</a></p><p>To test the app in a LSP demo site type <i>teacher</i> or <i>student</i> in the <i>Site address</i> field and click the <b>Connect button</b>.</p>",
     "core.login.instructions": "Instructions",
     "core.login.invalidaccount": "Please check your login details or ask your site administrator to check the site configuration.",
     "core.login.invaliddate": "Invalid date",
     "core.login.invalidemail": "Invalid email address",
-    "core.login.invalidmoodleversion": "Invalid Moodle version. The minimum version required is 3.1.",
+    "core.login.invalidmoodleversion": "Invalid LSP version. The minimum version required is 3.1.",
     "core.login.invalidsite": "The site URL is invalid.",
     "core.login.invalidtime": "Invalid time",
     "core.login.invalidurl": "Invalid URL specified",
     "core.login.invalidvaluemax": "The maximum value is {{$a}}",
     "core.login.invalidvaluemin": "The minimum value is {{$a}}",
-    "core.login.localmobileunexpectedresponse": "Moodle Mobile Additional Features check returned an unexpected response. You will be authenticated using the standard mobile service.",
+    "core.login.localmobileunexpectedresponse": "LSP Mobile Additional Features check returned an unexpected response. You will be authenticated using the standard mobile service.",
     "core.login.loggedoutssodescription": "You have to authenticate again. You need to log in to the site in a browser window.",
     "core.login.login": "Log in",
     "core.login.loginbutton": "Log in",
@@ -1624,7 +1624,7 @@
     "core.login.mobileservicesnotenabled": "Mobile access is not enabled on your site. Please contact your site administrator if you think it should be enabled.",
     "core.login.mustconfirm": "You need to confirm your account",
     "core.login.newaccount": "New account",
-    "core.login.newsitedescription": "Please enter the URL of your Moodle site. Note that it might not be configured to work with this app.",
+    "core.login.newsitedescription": "Please enter the URL of your LSP site. Note that it might not be configured to work with this app.",
     "core.login.notloggedin": "You need to be logged in.",
     "core.login.password": "Password",
     "core.login.passwordforgotten": "Forgotten password",
@@ -1671,7 +1671,7 @@
     "core.mainmenu.help": "Help",
     "core.mainmenu.logout": "Log out",
     "core.mainmenu.website": "Website",
-    "core.maxsizeandattachments": "Maximum file size: {{$a.size}}, maximum number of files: {{$a.attachments}}",
+    "core.maxsizeandattachments": "Maximum size for new files: {{$a.size}}, maximum attachments: {{$a.attachments}}",
     "core.min": "min",
     "core.mins": "mins",
     "core.misc": "Miscellaneous",
