--- a/assets/lang/he.json
+++ b/assets/lang/he.json
@@ -70,9 +70,7 @@
     "addon.calendar.allday": "כל היום",
     "addon.calendar.calendar": "לוח-שנה",
     "addon.calendar.calendarevents": "אירועי לוח שנה",
-    "addon.calendar.categoryevents": "אירועים בקטגוריה",
     "addon.calendar.confirmeventdelete": "האם למחוק אירוע \"{{$a}}\"?",
-    "addon.calendar.courseevents": "אירועי קורס",
     "addon.calendar.daynext": "היום הבא",
     "addon.calendar.dayprev": "היום הקודם",
     "addon.calendar.deleteallevents": "מחיקת כל האירועים",
@@ -94,7 +92,6 @@
     "addon.calendar.fri": "ו",
     "addon.calendar.friday": "שישי",
     "addon.calendar.gotoactivity": "צפיה בפעילות",
-    "addon.calendar.groupevents": "אירועים קבוצתיים",
     "addon.calendar.invalidtimedurationminutes": "משך הזמן בדקותשהכנסת אינו תקף. אנא הכנס משך זמן בדקות גדול מ-0 או הימנע מבחירת משך זמן .",
     "addon.calendar.invalidtimedurationuntil": "התאריך והזמן שבחרת עבור משך הזמן הוא לפני תחילת התאריך של האירוע. אנא בחר  תאריך נכון לפני המשך התהליך.",
     "addon.calendar.mon": "ב",
@@ -110,7 +107,6 @@
     "addon.calendar.repeatweeksl": "חזרה כל שבוע, יצירת סיכום",
     "addon.calendar.sat": "ש",
     "addon.calendar.saturday": "שבת",
-    "addon.calendar.siteevents": "אירועי מערכת",
     "addon.calendar.sun": "א",
     "addon.calendar.sunday": "ראשון",
     "addon.calendar.thu": "ה",
@@ -129,7 +125,6 @@
     "addon.calendar.typesite": "אירוע מערכתי",
     "addon.calendar.typeuser": "אירוע משתמש",
     "addon.calendar.upcomingevents": "אירועים קרבים",
-    "addon.calendar.userevents": "אירועי משתמשים",
     "addon.calendar.wed": "ד",
     "addon.calendar.wednesday": "רביעי",
     "addon.calendar.when": "בתאריך",
@@ -371,16 +366,13 @@
     "addon.mod_chat.currentusers": "משתמשים נוכחיים",
     "addon.mod_chat.enterchat": "הקליקו כאן כדי להיכנס לרב-שיח הנוכחי",
     "addon.mod_chat.entermessage": "הזנת ההודעה שלך",
-    "addon.mod_chat.messagebeepseveryone": "{{$a}} ציפצף לכולם!",
     "addon.mod_chat.messagebeepsyou": "{{$a}} ציפצף לך הרגע!",
     "addon.mod_chat.messageenter": "{{$a}} נכנס/ה לרב-שיח זה",
     "addon.mod_chat.messageexit": "{{$a}} עזב/ה רב-שיח זה",
     "addon.mod_chat.messages": "הודעות",
-    "addon.mod_chat.messageyoubeep": "צפצפת ל {{$a}}",
     "addon.mod_chat.modulenameplural": "רבי־שיח",
     "addon.mod_chat.mustbeonlinetosendmessages": "עליך להיות מחובר בכדי לשלוח הודעות.",
     "addon.mod_chat.nomessages": "אין הודעות עדיין",
-    "addon.mod_chat.saidto": "אמר ל-",
     "addon.mod_chat.send": "שליחה",
     "addon.mod_chat.sessionstart": "מפגש הרב-שיח הבא יתחיל ב: {{$a.date}}, ({{$a.fromnow}} מעכשיו)",
     "addon.mod_chat.talk": "דברו",
@@ -480,7 +472,7 @@
     "addon.mod_forum.addanewquestion": "הוספת שאלה חדשה",
     "addon.mod_forum.addanewtopic": "הוספת נושא חדש",
     "addon.mod_forum.addtofavourites": "סימון הדיון",
-    "addon.mod_forum.advanced": "הגדרות נוספות",
+    "addon.mod_forum.advanced": "יש להציג תחת 'הגדרות נוספות'",
     "addon.mod_forum.cannotadddiscussion": "הוספת דיונים לפורום זה דורשת השתייכות לקבוצה.",
     "addon.mod_forum.cannotadddiscussionall": "אין לך הרשאות להוספת נושא דיון חדש לכלל המשתתפים.",
     "addon.mod_forum.cannotcreatediscussion": "הוספת דיון חדש לא צלחה",
@@ -501,7 +493,6 @@
     "addon.mod_forum.errorgetgroups": "שגיאה בטעינת הגדרות קבוצה.",
     "addon.mod_forum.forumnodiscussionsyet": "עדיין לא קיימים נושאי דיונים בפורום זה.",
     "addon.mod_forum.group": "קבוצה",
-    "addon.mod_forum.lastpost": "הודעה אחרונה",
     "addon.mod_forum.lockdiscussion": "נעילת הדיון",
     "addon.mod_forum.message": "הודעה",
     "addon.mod_forum.modeflatnewestfirst": "הצגת תגובות בצורה שטוחה, החדשות ביותר ראשונות",
@@ -722,7 +713,6 @@
     "addon.mod_scorm.organizations": "רצפי־למידה",
     "addon.mod_scorm.passed": "עבר",
     "addon.mod_scorm.reviewmode": "מצב עיון בתשובות",
-    "addon.mod_scorm.score": "תוצאה",
     "addon.mod_scorm.suspended": "מושהה",
     "addon.mod_scorm.toc": "תוכן ענינים",
     "addon.mod_survey.cannotsubmitsurvey": "מתנצלים, היתה בעיה בהגשת הסקר שלך. אנא נסה שוב.",
@@ -1227,7 +1217,6 @@
     "core.fileuploader.uploadafile": "העלה קובץ",
     "core.fileuploader.uploading": "מעלה קבצים",
     "core.fileuploader.video": "וידאו",
-    "core.filter": "מסנן",
     "core.folder": "תיקייה",
     "core.forcepasswordchangenotice": "יש לשנות סיסמה כדי להמשיך",
     "core.fulllistofcourses": "כל הקורסים",
@@ -1267,7 +1256,6 @@
     "core.login.auth_email": "אימות מבוסס דואר־אלקטרוני",
     "core.login.authenticating": "מאמת נתונים",
     "core.login.cancel": "ביטול",
-    "core.login.changepassword": "שינוי סיסמה",
     "core.login.confirmdeletesite": "האם את/ה בטוח/ה שברצונך למחוק את האתר {{sitename}}?",
     "core.login.connect": "התחברות!",
     "core.login.connecttomoodle": "התחברות למוודל",
@@ -1280,7 +1268,6 @@
     "core.login.errordeletesite": "התרחשה שגיאה בזמן מחיקת אתר זה. אנא נסה שוב.",
     "core.login.errorupdatesite": "התרחשה שגיאה בזמן עדכון אסימון האתר (token).",
     "core.login.firsttime": "האם זהו הביקור הראשון שלך באתר זה?",
-    "core.login.forcepasswordchangenotice": "יש לשנות סיסמה כדי להמשיך",
     "core.login.forgotten": "שכחת את שם המשתמש או את הסיסמה שלך?",
     "core.login.getanothercaptcha": "הצגת CAPTCHA אחר",
     "core.login.help": "עזרה",
@@ -1480,7 +1467,7 @@
     "core.site": "מערכת",
     "core.sitehome.sitehome": "דף הבית",
     "core.sitehome.sitenews": "חדשות האתר",
-    "core.sitemaintenance": "מערכת Moodle זו מבצעת ברגעים אילו פעולות תחזוקה חשובות ואיננה זמינה כעת, אנא נסו שוב בעוד מספר דקות",
+    "core.sitemaintenance": "מערכת Moodle זו מבצעת ברגעים אילו פעולות תחזוקה חשובות ואינה זמינה, אנא נסו שוב בעוד רגע קט.",
     "core.sizeb": "בתים",
     "core.sizegb": "GB",
     "core.sizekb": "KB",
