--- a/assets/lang/hu.json
+++ b/assets/lang/hu.json
@@ -83,10 +83,8 @@
     "addon.blog.siteblogheading": "Portálblog",
     "addon.calendar.allday": "Egész nap",
     "addon.calendar.calendar": "Naptár",
-    "addon.calendar.categoryevents": "Kategóriába tartozó események",
     "addon.calendar.confirmeventdelete": "Biztosan törölni akarja ezt a(z)  \"{{$a}}\"  eseményt?",
     "addon.calendar.confirmeventseriesdelete": "A(z) \"{{$a.name}}\" esemény egy sorozat része. Csak ezt az eseményt törli vagy a sorozat összes {{$a.count}} eseményét?",
-    "addon.calendar.courseevents": "Kurzusesemények",
     "addon.calendar.daynext": "A következő nap",
     "addon.calendar.dayprev": "Az előző nap",
     "addon.calendar.deleteallevents": "Az összes esemény törlése",
@@ -106,7 +104,6 @@
     "addon.calendar.fri": "P",
     "addon.calendar.friday": "Péntek",
     "addon.calendar.gotoactivity": "Áttérés a tevékenységre",
-    "addon.calendar.groupevents": "Csoportesemények",
     "addon.calendar.invalidtimedurationminutes": "A percekben megadott időtartam érvénytelen. Adjon meg 0 percnél hosszabb időtartamot, vagy válassza a nincs időtartamot.",
     "addon.calendar.invalidtimedurationuntil": "A záró időtartam napja és időpontja az esemény kezdete előttre esik. Továbblépés előtt javítsa ki.",
     "addon.calendar.mon": "H",
@@ -121,7 +118,6 @@
     "addon.calendar.repeatweeksl": "Heti ismétlés, összesen",
     "addon.calendar.sat": "Szo",
     "addon.calendar.saturday": "Szombat",
-    "addon.calendar.siteevents": "Portálesemények",
     "addon.calendar.sun": "V",
     "addon.calendar.sunday": "Vasárnap",
     "addon.calendar.thu": "Cs",
@@ -140,7 +136,6 @@
     "addon.calendar.typesite": "Portálhoz tartozó esemény",
     "addon.calendar.typeuser": "Felhasználóhoz tartozó esemény",
     "addon.calendar.upcomingevents": "Elkövetkező események",
-    "addon.calendar.userevents": "Felhasználóhoz tartozó események",
     "addon.calendar.wed": "Sze",
     "addon.calendar.wednesday": "Szerda",
     "addon.calendar.when": "Mikor",
@@ -344,7 +339,7 @@
     "addon.mod_assign.submissionstatus": "Leadás állapota",
     "addon.mod_assign.submissionstatus_": "Nincs leadott munka",
     "addon.mod_assign.submissionstatus_draft": "Piszkozat (nincs leadva)",
-    "addon.mod_assign.submissionstatus_marked": "Osztályozott",
+    "addon.mod_assign.submissionstatus_marked": "Pontozott",
     "addon.mod_assign.submissionstatus_new": "Nincs leadott munka",
     "addon.mod_assign.submissionstatus_reopened": "Újból megnyitva",
     "addon.mod_assign.submissionstatus_submitted": "Osztályozásra leadva",
@@ -356,8 +351,7 @@
     "addon.mod_assign.submittedlate": "Feladat {{$a}} idővel később leadva",
     "addon.mod_assign.timemodified": "Utolsó módosítás",
     "addon.mod_assign.timeremaining": "Hátralévő idő",
-    "addon.mod_assign.ungroupedusers": "A 'Csoport számára leadás előírása' be van kapcsolva, de egyes felhasználók nincsenek csoporthoz - vagy több csoporthoz vannak - hozzárendelve, így nem adhatnak le munkát.",
-    "addon.mod_assign.ungroupedusersoptional": "Be van kapcsolva a csoportos tanulói leadás, egyes felhasználók azonban vagy nem csoporttagok, vagy egynél több csoport tagjai. Ezek a tanulók az Alapcsoport tagjaiként fogják leadni munkájukat!",
+    "addon.mod_assign.ungroupedusers": "A Csoport számára leadás előírása be van kapcsolva és egyes felhasználók nincsenek csoporthoz - vagy több csoporthoz vannak - hozzárendelve, így nem adhatnak le munkát.",
     "addon.mod_assign.unlimitedattempts": "Korlátlan",
     "addon.mod_assign.userswhoneedtosubmit": "Leadásra kötelezett tanulók: {{$a}}",
     "addon.mod_assign.viewsubmission": "Leadott munka megtekintése",
@@ -378,15 +372,12 @@
     "addon.mod_chat.currentusers": "Mostani felhasználók",
     "addon.mod_chat.enterchat": "Kattintson ide a csevegésbe való bekapcsolódáshoz",
     "addon.mod_chat.entermessage": "Írja be az üzenetet",
-    "addon.mod_chat.messagebeepseveryone": "{{$a}} mindenkit csönget!",
     "addon.mod_chat.messagebeepsyou": "{{$a}} most csöngetett Önnek!",
     "addon.mod_chat.messageenter": "{{$a}} most lépett be a csevegésbe",
     "addon.mod_chat.messageexit": "{{$a}} most lépett ki a csevegésből",
     "addon.mod_chat.messages": "Üzenetek",
-    "addon.mod_chat.messageyoubeep": "{{$a}} csengetett",
     "addon.mod_chat.modulenameplural": "Csevegések",
     "addon.mod_chat.nomessages": "Még nincs üzenet",
-    "addon.mod_chat.saidto": "mondta",
     "addon.mod_chat.send": "Elküld",
     "addon.mod_chat.sessionstart": "A következő csevegés kezdete  {{$a.date}}, (mostantól {{$a.fromnow}})",
     "addon.mod_chat.talk": "Beszéljen",
@@ -510,7 +501,6 @@
     "addon.mod_forum.erroremptymessage": "A hozzászólás szövege nem lehet üres.",
     "addon.mod_forum.erroremptysubject": "A hozzászólás tárgya nem lehet üres.",
     "addon.mod_forum.favouriteupdated": "Megjelölését frissítettük.",
-    "addon.mod_forum.lastpost": "Utolsó hozzászólás",
     "addon.mod_forum.lockdiscussion": "Megbeszélés zárolása",
     "addon.mod_forum.lockupdated": "Zárolását frissítettük.",
     "addon.mod_forum.message": "Üzenet",
@@ -730,7 +720,6 @@
     "addon.mod_scorm.organizations": "Szervezetek",
     "addon.mod_scorm.passed": "Sikerült",
     "addon.mod_scorm.reviewmode": "Ellenőrző üzemmód",
-    "addon.mod_scorm.score": "Pontszám",
     "addon.mod_scorm.suspended": "Felfüggesztve",
     "addon.mod_scorm.toc": "Tartalomjegyzék",
     "addon.mod_survey.ifoundthat": "Azt találtam",
@@ -864,7 +853,7 @@
     "assets.countries.BM": "Bermuda",
     "assets.countries.BN": "Brunei",
     "assets.countries.BO": "Bolíviai Többnemzetiségű Állam",
-    "assets.countries.BQ": "Karibi Hollandia",
+    "assets.countries.BQ": "Bonaire, Sint Eustatius és Saba",
     "assets.countries.BR": "Brazília",
     "assets.countries.BS": "Bahama-szigetek",
     "assets.countries.BT": "Bhután",
@@ -907,7 +896,7 @@
     "assets.countries.FI": "Finnország",
     "assets.countries.FJ": "Fidzsi-szigetek",
     "assets.countries.FK": "Falkland-szigetek",
-    "assets.countries.FM": "Mikronéziai Szövetségi Államok",
+    "assets.countries.FM": "Mikronézia",
     "assets.countries.FO": "Feröer-szigetek",
     "assets.countries.FR": "Franciaország",
     "assets.countries.GA": "Gabon",
@@ -942,7 +931,7 @@
     "assets.countries.IN": "India",
     "assets.countries.IO": "Brit Indiai-óceániai Terület",
     "assets.countries.IQ": "Irak",
-    "assets.countries.IR": "Iráni Iszlám Köztársaság",
+    "assets.countries.IR": "Irán",
     "assets.countries.IS": "Izland",
     "assets.countries.IT": "Olaszország",
     "assets.countries.JE": "Jersey",
@@ -954,7 +943,7 @@
     "assets.countries.KH": "Kambodzsa",
     "assets.countries.KI": "Kiribati Köztársaság",
     "assets.countries.KM": "Comore-szigetek",
-    "assets.countries.KN": "Saint Christopher és Nevis Államszövetség",
+    "assets.countries.KN": "Saint Christopher és Nevis",
     "assets.countries.KP": "Koreai NDK",
     "assets.countries.KR": "Dél-Korea",
     "assets.countries.KW": "Kuvait",
@@ -975,10 +964,10 @@
     "assets.countries.MC": "Monaco",
     "assets.countries.MD": "Moldávia",
     "assets.countries.ME": "Montenegró",
-    "assets.countries.MF": "Saint-Martin (francia rész)",
+    "assets.countries.MF": "Saint Martin (francia rész)",
     "assets.countries.MG": "Madagaszkár",
     "assets.countries.MH": "Marshall-szigetek",
-    "assets.countries.MK": "Észak-macedón Köztársaság",
+    "assets.countries.MK": "Macedónia",
     "assets.countries.ML": "Mali",
     "assets.countries.MM": "Mianmar",
     "assets.countries.MN": "Mongólia",
@@ -1017,7 +1006,7 @@
     "assets.countries.PM": "St. Pierre és Miquelon",
     "assets.countries.PN": "Pitcairn-sziget",
     "assets.countries.PR": "Puerto Rico",
-    "assets.countries.PS": "Palesztin Autonómia",
+    "assets.countries.PS": "Palesztína Állam",
     "assets.countries.PT": "Portugália",
     "assets.countries.PW": "Palau",
     "assets.countries.PY": "Paraguay",
@@ -1072,7 +1061,7 @@
     "assets.countries.UZ": "Üzbegisztán",
     "assets.countries.VA": "Vatikánváros",
     "assets.countries.VC": "Szent Vincent és a Grenadine-szigetek",
-    "assets.countries.VE": "Venezuelai Bolivári Köztársaság",
+    "assets.countries.VE": "Venezuela Bolívári Köztársasága",
     "assets.countries.VG": "Virgin-szigetek (brit)",
     "assets.countries.VI": "Virgin-szigetek (USA)",
     "assets.countries.VN": "Vietnam",
@@ -1167,14 +1156,14 @@
     "core.commentscount": "Megjegyzések  ({{$a}})",
     "core.completion-alt-auto-fail": "Teljesítve: {{$a}}  (a teljesítési pontszámot nem érte el)",
     "core.completion-alt-auto-n": "Nincs teljesítve:  {{$a}}",
-    "core.completion-alt-auto-n-override": "Nincs teljesítve: {{$a.modname}} (beállította {{$a.overrideuser}})",
+    "core.completion-alt-auto-n-override": "Nincs befejezve: {{$a.modname}} (beállította {{$a.overrideuser}})",
     "core.completion-alt-auto-pass": "Teljesítve: {{$a}} (a teljesítési pontszámot elérte)",
     "core.completion-alt-auto-y": "Teljesítve:  {{$a}}",
-    "core.completion-alt-auto-y-override": "Teljesítve: {{$a.modname}} (beállította {{$a.overrideuser}})",
+    "core.completion-alt-auto-y-override": "Befejezve: {{$a.modname}} (beállította {{$a.overrideuser}})",
     "core.completion-alt-manual-n": "Nincs teljesítve:  {{$a}}; teljesítettként való megjelöléséhez válassza ki.",
-    "core.completion-alt-manual-n-override": "Nincs teljesítve: {{$a.modname}} (beállította {{$a.overrideuser}}). Válassza ki teljesítettként való megjelölésre.",
+    "core.completion-alt-manual-n-override": "Nincs befejezve: {{$a.modname}} (beállította {{$a.overrideuser}}). Válassza ki befejezettként való megjelölésre.",
     "core.completion-alt-manual-y": "Teljesítve:  {{$a}}, teljesítetlenként való megjelöléséhez válassza ki.",
-    "core.completion-alt-manual-y-override": "Teljesítve: {{$a.modname}} (beállította {{$a.overrideuser}}). Válassza ki nem teljesítettként való megjelölésre.",
+    "core.completion-alt-manual-y-override": "Befejezve: {{$a.modname}} (beállította {{$a.overrideuser}}). Válassza ki befejezetlenként való megjelölésre.",
     "core.confirmdeletefile": "Biztosan törli ezt az állományt?",
     "core.considereddigitalminor": "Túl fiatal vagy a portálon fiók létrehozásához.",
     "core.content": "Tartalom",
@@ -1238,7 +1227,6 @@
     "core.fileuploader.more": "Tovább",
     "core.fileuploader.uploading": "Feltöltés",
     "core.fileuploader.video": "Videó",
-    "core.filter": "Szűrő",
     "core.folder": "Mappa",
     "core.forcepasswordchangenotice": "Továbblépéshez módosítsa jelszavát.",
     "core.fulllistofcourses": "Minden kurzus",
@@ -1276,14 +1264,12 @@
     "core.login.auth_email": "E-mail alapú önregisztráció",
     "core.login.authenticating": "Hitelesítés",
     "core.login.cancel": "Mégse",
-    "core.login.changepassword": "Jelszó módosítása",
     "core.login.createaccount": "Új felhasználói azonosítóm létrehozása",
     "core.login.createuserandpass": "Új felhasználónév és jelszó megadása",
     "core.login.emailconfirmsent": "Egy e-mailt kellett kapnia {{$a}} címére. A levél a regisztráció kitöltéséhez szükséges egyszerű teendőket tartalmazza. Ha továbbra is nehézségekbe ütközik, lépjen kapcsolatba a portál rendszergazdájával.",
     "core.login.emailconfirmsentsuccess": "A visszaigazoló e-mail elküldése sikerült",
     "core.login.enterthewordsabove": "Írja le a fenti szavakat",
     "core.login.firsttime": "Most van itt először?",
-    "core.login.forcepasswordchangenotice": "Továbblépéshez módosítsa jelszavát.",
     "core.login.forgotten": "Elfelejtette felhasználónevét vagy jelszavát?",
     "core.login.getanothercaptcha": "Másik CAPTCHA beszerzése",
     "core.login.help": "Súgó",
@@ -1331,7 +1317,7 @@
     "core.mainmenu.help": "Súgó",
     "core.mainmenu.logout": "Kilépés",
     "core.mainmenu.website": "Weboldal",
-    "core.maxsizeandattachments": "Állományok maximális mérete: {{$a.size}}, maximális csatolt állomány: {{$a.attachments}}",
+    "core.maxsizeandattachments": "Új állományok maximális mérete: {{$a.size}}, maximális csatolt állomány: {{$a.attachments}}",
     "core.min": "p",
     "core.mins": "perc",
     "core.misc": "Egyéb",
