--- a/assets/lang/ru.json
+++ b/assets/lang/ru.json
@@ -28,7 +28,7 @@
     "addon.block_glossaryrandom.pluginname": "Случайная запись из глоссария",
     "addon.block_learningplans.pluginname": "Учебные планы",
     "addon.block_myoverview.all": "Все (кроме скрытых)",
-    "addon.block_myoverview.favourites": "Избранное",
+    "addon.block_myoverview.favourites": "Помеченные",
     "addon.block_myoverview.future": "Предстоящие",
     "addon.block_myoverview.hiddencourses": "Скрытые",
     "addon.block_myoverview.inprogress": "Текущие",
@@ -44,12 +44,9 @@
     "addon.block_recentactivity.pluginname": "Последние действия",
     "addon.block_recentlyaccessedcourses.nocourses": "Нет недавно посещенных курсов",
     "addon.block_recentlyaccessedcourses.pluginname": "Недавно посещенные курсы",
-    "addon.block_recentlyaccesseditems.pluginname": "Недавние объекты",
     "addon.block_rssclient.pluginname": "Внешние RSS-ленты",
     "addon.block_selfcompletion.pluginname": "Самостоятельное отслеживание завершения",
     "addon.block_sitemainmenu.pluginname": "Основное меню",
-    "addon.block_starredcourses.nocourses": "Нет избранных курсов",
-    "addon.block_starredcourses.pluginname": "Избранные курсы",
     "addon.block_tags.pluginname": "Теги",
     "addon.block_timeline.next30days": "Следующие 30 дней",
     "addon.block_timeline.next3months": "Следующие 3 месяца",
@@ -67,10 +64,8 @@
     "addon.calendar.allday": "Все дни",
     "addon.calendar.calendar": "Календарь",
     "addon.calendar.calendarevents": "События календаря",
-    "addon.calendar.categoryevents": "События категории",
     "addon.calendar.confirmeventdelete": "Вы уверены, что хотите удалить событие «{{$a}}»?",
     "addon.calendar.confirmeventseriesdelete": "Событие «{{$a.name}}» является частью серии. Вы хотите удалить только это событие или все события ({{$a.count}}) в этой серии?",
-    "addon.calendar.courseevents": "События курса",
     "addon.calendar.daynext": "Следующий день",
     "addon.calendar.dayprev": "Предыдущий день",
     "addon.calendar.defaultnotificationtime": "Время уведомлений по умолчанию",
@@ -93,7 +88,6 @@
     "addon.calendar.fri": "Пт",
     "addon.calendar.friday": "Пятница",
     "addon.calendar.gotoactivity": "Перейти к активному элементу",
-    "addon.calendar.groupevents": "Групповые события",
     "addon.calendar.invalidtimedurationminutes": "Вы ввели неверное значение длительности в минутах. Введите значение больше 0 или не указывайте значение.",
     "addon.calendar.invalidtimedurationuntil": "Установленный период для события оказывается раньше времени его начала. Пожалуйста, исправьте это перед продолжением.",
     "addon.calendar.mon": "Пн",
@@ -109,7 +103,6 @@
     "addon.calendar.repeatweeksl": "Повторять еженедельно, создать всего:",
     "addon.calendar.sat": "Сб",
     "addon.calendar.saturday": "Суббота",
-    "addon.calendar.siteevents": "События сайта",
     "addon.calendar.sun": "Вс",
     "addon.calendar.sunday": "Воскресенье",
     "addon.calendar.thu": "Чт",
@@ -128,7 +121,6 @@
     "addon.calendar.typesite": "Событие сайта",
     "addon.calendar.typeuser": "Событие пользователя",
     "addon.calendar.upcomingevents": "Предстоящие события",
-    "addon.calendar.userevents": "События пользователя",
     "addon.calendar.wed": "Ср",
     "addon.calendar.wednesday": "Среда",
     "addon.calendar.when": "Когда",
@@ -399,16 +391,13 @@
     "addon.mod_chat.errorwhilegettingchatusers": "Ошибка при получении пользователей чата",
     "addon.mod_chat.errorwhileretrievingmessages": "Ошибка при получении сообщения от сервера.",
     "addon.mod_chat.errorwhilesendingmessage": "Ошибка при отправке сообщения",
-    "addon.mod_chat.messagebeepseveryone": "{{$a}} отправил сигнал всем!",
     "addon.mod_chat.messagebeepsyou": "{{$a}} отправил Вам сигнал!",
     "addon.mod_chat.messageenter": "{{$a}} появился в чате",
     "addon.mod_chat.messageexit": "{{$a}} ушел из чата",
     "addon.mod_chat.messages": "Сообщения",
-    "addon.mod_chat.messageyoubeep": "Вы отправили сигнал {{$a}}",
     "addon.mod_chat.modulenameplural": "Чаты",
     "addon.mod_chat.mustbeonlinetosendmessages": "Вы должны быть в сети, чтобы отправлять сообщения.",
     "addon.mod_chat.nomessages": "Нет ни одного сообщения",
-    "addon.mod_chat.saidto": "сказано",
     "addon.mod_chat.send": "Отправить",
     "addon.mod_chat.sessionstart": "Следующий сеанс чата начнётся: {{$a.date}}, (через {{$a.fromnow}})",
     "addon.mod_chat.talk": "Разговор",
@@ -537,7 +526,6 @@
     "addon.mod_forum.favouriteupdated": "Ваши пометки были обновлены.",
     "addon.mod_forum.forumnodiscussionsyet": "В этом форуме ещё нет тем для обсуждения.",
     "addon.mod_forum.group": "Группа",
-    "addon.mod_forum.lastpost": "Последнее сообщение",
     "addon.mod_forum.message": "Сообщение",
     "addon.mod_forum.modeflatnewestfirst": "Плоско, впереди новые",
     "addon.mod_forum.modeflatoldestfirst": "Плоско, впереди старые",
@@ -809,7 +797,6 @@
     "addon.mod_scorm.organizations": "Организаций",
     "addon.mod_scorm.passed": "Выполнено успешно",
     "addon.mod_scorm.reviewmode": "Режим просмотра",
-    "addon.mod_scorm.score": "Балл",
     "addon.mod_scorm.scormstatusnotdownloaded": "Данный пакет SCORM не загружен. Он загрузится автоматически, когда вы откроете его.",
     "addon.mod_scorm.scormstatusoutdated": "Данный пакет SCORM был изменён с момента последней загрузки. Он будет автоматически загружен, когда вы откроете его.",
     "addon.mod_scorm.suspended": "Приостановлено",
@@ -1431,7 +1418,6 @@
     "core.fileuploader.uploading": "Загрузка",
     "core.fileuploader.uploadingperc": "Загрузка на сервер {{$a}}%",
     "core.fileuploader.video": "Видео",
-    "core.filter": "Фильтр",
     "core.folder": "Папка",
     "core.forcepasswordchangenotice": "Вы должны изменить свой пароль.",
     "core.fulllistofcourses": "Все курсы",
@@ -1478,7 +1464,6 @@
     "core.login.auth_email": "Самостоятельная регистрация по электронной почте",
     "core.login.authenticating": "Аутентификация",
     "core.login.cancel": "Отмена",
-    "core.login.changepassword": "Изменить пароль",
     "core.login.checksiteversion": "Убедитесь, что ваш сайт использует Moodle 2.4 или более позднюю версию.",
     "core.login.confirmdeletesite": "Вы уверены, что хотите удалить сайт {{sitename}}?",
     "core.login.connect": "Подключено!",
@@ -1496,7 +1481,6 @@
     "core.login.errordeletesite": "При удалении этой страницы произошла ошибка. Пожалуйста, попробуйте еще раз.",
     "core.login.errorupdatesite": "При обновлении ключа сайта произошла ошибка.",
     "core.login.firsttime": "Вы в первый раз на нашем сайте?",
-    "core.login.forcepasswordchangenotice": "Вы должны изменить свой пароль.",
     "core.login.forgotten": "Забыли логин или пароль?",
     "core.login.getanothercaptcha": "Получить другой CAPTCHA (тест для различения людей и компьютеров)",
     "core.login.help": "Справка",
