--- a/assets/lang/sv.json
+++ b/assets/lang/sv.json
@@ -43,7 +43,6 @@
     "addon.block_rssclient.pluginname": "RSS-klient",
     "addon.block_selfcompletion.pluginname": "Eget fullföljande",
     "addon.block_sitemainmenu.pluginname": "Huvudmeny",
-    "addon.block_starredcourses.nocourses": "Inga favoritmärkta kurser",
     "addon.block_tags.pluginname": "Rubriker för intressen",
     "addon.block_timeline.duedate": "Deadline",
     "addon.block_timeline.next30days": "Kommande 30 dagar",
@@ -66,10 +65,8 @@
     "addon.calendar.allday": "Hela dagen",
     "addon.calendar.calendar": "Kalender",
     "addon.calendar.calendarevents": "Kalenderhändelser",
-    "addon.calendar.categoryevents": "Händelser i kategori",
     "addon.calendar.confirmeventdelete": "Är Du säker på att Du vill ta bort den här händelsen?",
     "addon.calendar.confirmeventseriesdelete": "Händelsen \"{{$a.name}}\" ingår i en serie av händelser. Vill du ta bort bara denna händelse, eller alla händelser i serien {{$a.count}}?",
-    "addon.calendar.courseevents": "Händelser i kursen",
     "addon.calendar.daynext": "Nästa dag",
     "addon.calendar.dayprev": "Dagen före",
     "addon.calendar.deleteallevents": "Ta bort alla händelser",
@@ -91,7 +88,6 @@
     "addon.calendar.fri": "Fre",
     "addon.calendar.friday": "Fredag",
     "addon.calendar.gotoactivity": "Gå till aktivitete",
-    "addon.calendar.groupevents": "Händelser för grupp",
     "addon.calendar.invalidtimedurationminutes": "Varaktigheten i minuter som du har angett är ogiltig. Ange tiden i minuter större än 0 eller välj någon varaktighet",
     "addon.calendar.invalidtimedurationuntil": "Datum och tid du valt för tid till är före starttiden för händelsen. Vänligen korrigera detta innan du fortsätter.",
     "addon.calendar.mon": "Mån",
@@ -107,7 +103,6 @@
     "addon.calendar.repeatweeksl": "Upprepa veckovis, skapa",
     "addon.calendar.sat": "Lör",
     "addon.calendar.saturday": "Lördag",
-    "addon.calendar.siteevents": "Händelser för webbplatsen",
     "addon.calendar.sun": "Sön",
     "addon.calendar.sunday": "Söndag",
     "addon.calendar.thu": "Tor",
@@ -125,7 +120,6 @@
     "addon.calendar.typesite": "Händelse för webbplats",
     "addon.calendar.typeuser": "Händelse för användare",
     "addon.calendar.upcomingevents": "Kommande händelser",
-    "addon.calendar.userevents": "Händelser för användare",
     "addon.calendar.wed": "Ons",
     "addon.calendar.wednesday": "Onsdag",
     "addon.calendar.when": "När",
@@ -221,7 +215,6 @@
     "addon.messages.decline": "Avböj",
     "addon.messages.deleteallconfirm": "Vill du verkligen radera hela denna konversation?",
     "addon.messages.deleteconversation": "Radera konversation",
-    "addon.messages.deleteforeveryone": "Ta bort för mig och alla andra",
     "addon.messages.errordeletemessage": "Fel vid borttagning av meddelandet",
     "addon.messages.errorwhileretrievingcontacts": "Fel vid hämtning av kontakter från servern.",
     "addon.messages.errorwhileretrievingdiscussions": "Fel vid hämtning  av diskussionerna från servern.",
@@ -229,7 +222,6 @@
     "addon.messages.groupconversations": "Grupp",
     "addon.messages.groupinfo": "Gruppinformation",
     "addon.messages.individualconversations": "Privat",
-    "addon.messages.info": "Användarinformation",
     "addon.messages.isnotinyourcontacts": "{{$a}} finns inte bland dina kontakter",
     "addon.messages.message": "Meddelande",
     "addon.messages.messagenotsent": "Meddelandet skickades inte, försök igen senare.",
@@ -238,7 +230,7 @@
     "addon.messages.newmessage": "Nytt meddelande",
     "addon.messages.nocontactrequests": "Inga kontaktförfrågningar",
     "addon.messages.nocontactsgetstarted": "Inga kontakter",
-    "addon.messages.nofavourites": "Inga favoriter konversationer",
+    "addon.messages.nofavourites": "Inga favoriter",
     "addon.messages.nogroupconversations": "Det finns inga gruppkonversationer",
     "addon.messages.noindividualconversations": "Det finns inga privata konversationer",
     "addon.messages.nomessagesfound": "Det gick inte att hitta några nya meddelanden",
@@ -251,8 +243,6 @@
     "addon.messages.removefromyourcontacts": "Ta bort från dina kontakter",
     "addon.messages.requirecontacttomessage": "Be {{$a}} att lägga till dig som kontakt för att du ska kunna skicka meddelanden till honom/henne.",
     "addon.messages.searchcombined": "Sök personer och meddelanden",
-    "addon.messages.selfconversation": "Personlig yta",
-    "addon.messages.selfconversationdefaultmessage": "Spara utkast till meddelanden, länkar, anteckningar etc. för senare åtkomst",
     "addon.messages.sendcontactrequest": "Skicka kontaktförfrågan",
     "addon.messages.type_blocked": "blockerad",
     "addon.messages.type_offline": "Offline",
@@ -376,16 +366,13 @@
     "addon.mod_chat.errorwhilegettingchatusers": "Fel vid vid hämtning av chattanvändare",
     "addon.mod_chat.errorwhileretrievingmessages": "Fel vid hämtning av meddelanden från servern",
     "addon.mod_chat.errorwhilesendingmessage": "Fel när meddelandet skickades",
-    "addon.mod_chat.messagebeepseveryone": "{{$a}} skickar en pipsignal till alla!",
     "addon.mod_chat.messagebeepsyou": "{{$a}} har just skickat en pipsignal till Dig",
     "addon.mod_chat.messageenter": "{{$a}} har precis kommit in i detta direktsamtal",
     "addon.mod_chat.messageexit": "{{$a}} har lämnat det här direktsamtalet",
     "addon.mod_chat.messages": "Meddelanden",
-    "addon.mod_chat.messageyoubeep": "Du signalerade till {{$a}}",
     "addon.mod_chat.modulenameplural": "Direktsamtal",
     "addon.mod_chat.mustbeonlinetosendmessages": "Du måste vara online för att skicka meddelanden",
     "addon.mod_chat.nomessages": "Inga meddelanden än",
-    "addon.mod_chat.saidto": "sade till",
     "addon.mod_chat.send": "Skicka",
     "addon.mod_chat.sessionstart": "Sessionen för direktsamtal kommer att starta inom: {{$a}}",
     "addon.mod_chat.talk": "Tala",
@@ -479,20 +466,12 @@
     "addon.mod_forum.addanewdiscussion": "Lägg till ett nytt diskussionsämne",
     "addon.mod_forum.addanewquestion": "Lägg till en ny fråga",
     "addon.mod_forum.addanewtopic": "Lägg till ett nytt ämne",
-    "addon.mod_forum.addtofavourites": "Lägg denna diskussion till mina favoriter",
     "addon.mod_forum.advanced": "Avancerad",
     "addon.mod_forum.cannotadddiscussion": "För att lägga till diskussionsämnen till det här forumet krävs det att man är medlem av en grupp.",
     "addon.mod_forum.cannotadddiscussionall": "Du har inte tillstånd att lägga till ett nytt diskussionsämne för alla deltagare. ",
     "addon.mod_forum.cannotcreatediscussion": "Det gick inte att skapa en ny diskussion",
     "addon.mod_forum.couldnotadd": "Det gick inte att lägga till Ditt inlägg på grund av okänt fel.",
-    "addon.mod_forum.cutoffdatereached": "Stängningsdatumet för detta forum har passerats. Det är inte längre möjligt att göra inlägg.",
     "addon.mod_forum.discussion": "Diskussionsämne",
-    "addon.mod_forum.discussionlistsortbycreatedasc": "Sortera efter skapelsedatum, äldst överst.",
-    "addon.mod_forum.discussionlistsortbycreateddesc": "Sortera efter skapelsedatum, nyast överst.",
-    "addon.mod_forum.discussionlistsortbylastpostasc": "Sortera efter skapelsedatum för det senaste inlägget, äldst överst.",
-    "addon.mod_forum.discussionlistsortbylastpostdesc": "Sortera efter skapelsedatum för det senaste inlägget, nyast överst.",
-    "addon.mod_forum.discussionlistsortbyrepliesasc": "Sortera efter antal svar, i stigande ordning.",
-    "addon.mod_forum.discussionlistsortbyrepliesdesc": "Sortera efter antal svar, i fallande ordning.",
     "addon.mod_forum.discussionlocked": "Denna diskussion är stängd och du kan inte längre göra inlägg i den.",
     "addon.mod_forum.discussionpinned": "Fastnålad",
     "addon.mod_forum.discussionsubscription": "Diskussions prenumeration",
@@ -503,8 +482,6 @@
     "addon.mod_forum.errorgetgroups": "Fel vid hämtning av gruppinställningar",
     "addon.mod_forum.forumnodiscussionsyet": "Det finns inga diskussionsämnen ännu i detta forum.",
     "addon.mod_forum.group": "Grupp",
-    "addon.mod_forum.lastpost": "Senaste inlägg",
-    "addon.mod_forum.lockdiscussion": "Lås denna diskussion för nya inlägg.",
     "addon.mod_forum.message": "Meddelande",
     "addon.mod_forum.modeflatnewestfirst": "Visa svarslista, med det senaste först",
     "addon.mod_forum.modeflatoldestfirst": "Visa svarslista, med det äldsta först",
@@ -512,18 +489,12 @@
     "addon.mod_forum.modulenameplural": "Forum",
     "addon.mod_forum.numdiscussions": "{{numdiscussions}} diskussioner",
     "addon.mod_forum.numreplies": "{{numreplies}} svar",
-    "addon.mod_forum.postisprivatereply": "Detta är ett privat svar. Det är inte synligt för andra deltagare.",
     "addon.mod_forum.posttoforum": "Publicera inlägget i forumet",
     "addon.mod_forum.posttomygroups": "Publicera en kopia i alla grupper",
-    "addon.mod_forum.privatereply": "Svara privat",
     "addon.mod_forum.re": "Svar:",
-    "addon.mod_forum.removefromfavourites": "Ta bort diskussionen från dina favoriter.",
     "addon.mod_forum.reply": "Svar",
-    "addon.mod_forum.replyplaceholder": "Skriv ditt svar...",
     "addon.mod_forum.subject": "Ämne",
     "addon.mod_forum.tagarea_forum_posts": "Foruminlägg",
-    "addon.mod_forum.unlockdiscussion": "Lås upp diskussionen",
-    "addon.mod_forum.unpindiscussion": "Ta bort nålen som låser fast diskussionen högst upp",
     "addon.mod_forum.unread": "Oläst",
     "addon.mod_forum.unreadpostsnumber": "{{$a}} olästa inlägg",
     "addon.mod_glossary.addentry": "Lägg till bidrag",
@@ -551,7 +522,6 @@
     "addon.mod_glossary.modulenameplural": "Ord- och begreppslistor",
     "addon.mod_glossary.noentriesfound": "Inga inlägg hittades",
     "addon.mod_glossary.searchquery": "",
-    "addon.mod_glossary.tagarea_glossary_entries": "Uppslagsord/inlägg i ordboken",
     "addon.mod_imscp.deploymenterror": "Fel med innehållspaket!",
     "addon.mod_imscp.modulenameplural": "Innehållspaket av typ IMS",
     "addon.mod_imscp.showmoduledescription": "Visa beskrivning",
@@ -744,7 +714,6 @@
     "addon.mod_scorm.organizations": "Organisationer",
     "addon.mod_scorm.passed": "Genomförd",
     "addon.mod_scorm.reviewmode": "Läge för granskning",
-    "addon.mod_scorm.score": "Resultat",
     "addon.mod_scorm.scormstatusnotdownloaded": "Detta SCORM är inte nedladdat. Det kommer att laddas ner automatiskt när du öppnar den",
     "addon.mod_scorm.scormstatusoutdated": "Detta SCORM har modifierats sedan sista nedladdningen. Det kommer att laddas ner automatiskt när du öppnar den",
     "addon.mod_scorm.suspended": "Avstängd",
@@ -1213,10 +1182,8 @@
     "core.erroropenfilenoapp": "Fel vid öppning av filen: ingen app hittades som kan öppna denna typ av fil.",
     "core.erroropenfilenoextension": "Fel vid öppning av filen: Filen saknar definition",
     "core.erroropenpopup": "Aktiviteten försöker öppna en popup . Detta stöds inte i den här appen.",
-    "core.favourites": "Favoritmärkt",
     "core.filename": "Filnamn",
     "core.filenotfound": "Det gick tyvärr inte att hitta filen.",
-    "core.fileuploader.addfiletext": "Lägg till fil",
     "core.fileuploader.audio": "Audio",
     "core.fileuploader.camera": "Kamera",
     "core.fileuploader.confirmuploadfile": "Du är på väg att ladda upp {{size}}. Är du säker på att du vill fortsätta?",
@@ -1238,7 +1205,6 @@
     "core.fileuploader.uploadafile": "Ladda upp en fil",
     "core.fileuploader.uploading": "Laddar upp",
     "core.fileuploader.video": "Video",
-    "core.filter": "Filter",
     "core.folder": "Katalog",
     "core.forcepasswordchangenotice": "Du måste använda Ditt lösenord för att kunna fortsätta.",
     "core.fulllistofcourses": "Alla kurser",
@@ -1274,12 +1240,10 @@
     "core.lastmodified": "Senast modifierad",
     "core.list": "Lista",
     "core.listsep": ";",
-    "core.loading": "Laddar",
     "core.location": "Plats",
     "core.login.auth_email": "E-postbaserad autenticering",
     "core.login.authenticating": "Autentisera",
     "core.login.cancel": "Avbryt",
-    "core.login.changepassword": "Ändra lösenord",
     "core.login.confirmdeletesite": "Är du säker på att du vill ta bort webbsidan {{sitename}}?",
     "core.login.connect": "Anslut!",
     "core.login.connecttomoodle": "Anslut till Moodle",
@@ -1287,12 +1251,10 @@
     "core.login.createuserandpass": "Skapa ett nytt användarnamn och lösenord för att logga in med.",
     "core.login.credentialsdescription": "Ange ditt användarnamn och lösenord för att logga på",
     "core.login.emailconfirmsent": "<p>Vi har skickat ett e-postbrev som Du bör ha fått<br /> till Din adress på <b>{{$a}}</b></p>\n<p>Det innehåller enkla instruktioner som hjälper Dig<br />att fullfölja Din registrering.</p>\n<p>Om Du stöter på problem, är Du välkommen att <br />kontakta den som ansvarar för webbplatsen.</p>",
-    "core.login.emailconfirmsentsuccess": "Bekräftelsemejlet har skickats.",
     "core.login.enterthewordsabove": "Mata in de ovanstående orden",
     "core.login.errordeletesite": "Ett fel inträffade vid borttagning av denna webbsida. Var god försök igen.",
     "core.login.errorupdatesite": "Ett fel inträffade vid uppdatering av webbplatsens token.",
     "core.login.firsttime": "Är det första gången Du är här?",
-    "core.login.forcepasswordchangenotice": "Du måste använda Ditt lösenord för att kunna fortsätta.",
     "core.login.forgotten": "Har Du glömt Ditt användarnamn och lösenord?",
     "core.login.getanothercaptcha": "Skaffa en  CAPTCHA till",
     "core.login.help": "Hjälp",
@@ -1313,7 +1275,7 @@
     "core.login.missingfirstname": "Förnamn saknas",
     "core.login.missinglastname": "Efternamn saknas",
     "core.login.mobileservicesnotenabled": "Mobila tjänster är inte aktiverade på din sida. Vänligen kontakta din Moodleadministrator om du tycker att mobil åtkomst ska aktiveras.",
-    "core.login.mustconfirm": "Du måste bekräfta din inloggning.",
+    "core.login.mustconfirm": "Du måste bekräfta Din inloggning.",
     "core.login.newaccount": "Nytt konto",
     "core.login.newsitedescription": "Ange webbadressen till din Moodle webbplats. Observera att den kan vara konfigurerad så att den inte fungerar med appen",
     "core.login.notloggedin": "Du måste vara inloggad.",
@@ -1330,7 +1292,6 @@
     "core.login.reconnect": "Anslut",
     "core.login.reconnectdescription": "Din autentiseringsnyckel är ogiltig eller har upphört att gälla. Anslut till sidan på nytt",
     "core.login.reconnectssodescription": "Din autentiseringsnyckel är ogiltig eller har upphört att gälla. Anslut till sidan på nytt. Du måste logga in på webbsidan via ett webbläsarfönster",
-    "core.login.resendemail": "Skicka om e-postmeddelande.",
     "core.login.selectacountry": "Välj ett land",
     "core.login.siteaddress": "Webbsidaadress",
     "core.login.siteinmaintenance": "Din webbplats är i underhållsläge",
@@ -1409,7 +1370,6 @@
     "core.phone": "Telefon",
     "core.pictureof": "Bild av {{$a}}",
     "core.previous": "Tidigare",
-    "core.proceed": "Fortsätt",
     "core.pulltorefresh": "Dra för att uppdatera",
     "core.question.answer": "Svar",
     "core.question.answersaved": "Svar sparade",
@@ -1440,7 +1400,6 @@
     "core.resources": "Resurser",
     "core.restore": "Återställ",
     "core.restricted": "Begränsad",
-    "core.save": "Spara",
     "core.search": "Sök",
     "core.searching": "Söker",
     "core.searchresults": "Sökresultat",
